--- a/localisation/braz_por/MD_countries_cosmetic_l_braz_por.yml
+++ b/localisation/braz_por/MD_countries_cosmetic_l_braz_por.yml
@@ -1371,23 +1371,17 @@
  UNITED_ISLAMIC_REPUBLICS: "Repúblicas Islâmicas Unidas"
  UNITED_ISLAMIC_REPUBLICS_ADJ: "Muçulmana"
  UNITED_ISLAMIC_REPUBLICS_DEF: "Repúblicas Islâmicas Unidas"
- PER_interim_government: "Irã Revolucionário"
- PER_interim_government_DEF: "Irã Revolucionário"
- PER_interim_government_ADJ: "Iraniana"
  PER_iranic_federation: "Federação Iraniana"
  PER_iranic_federation_DEF: "Federação Iraniana"
  PER_iranic_federation_ADJ: "Iraniana"
- PER_highway_nation: "Estado Imperial de Highwaystan"
- PER_highway_nation_DEF: "o Estado Imperial de Highwaystan"
- PER_highway_nation_ADJ: "Rodoviário"
  IKR_pjak_state: "Partido da Vida Curda"
  IKR_pjak_state_DEF: "o Partido da Vida Curda"
  IKR_pjak_state_ADJ: "Curdo"
  PER_mek_flag: "NCRI"
  PER_mek_flagt_DEF: "NCRI"
  PER_mek_flag_ADJ: "Iraniano"
- PER_mullahs_government: "República Islâmica do Irã"
- PER_mullahs_government_DEF: "República Islâmica do Irã"
+ PER_mullahs_government: "Comitê de Resistência da República Islâmica"
+ PER_mullahs_government_DEF: "Comitê de Resistência da República Islâmica"
  PER_mullahs_government_ADJ: "Iraniano"
  PER_komola: "Komala"
  PER_komola_DEF: "Komala"
@@ -1398,21 +1392,12 @@
  PER_republic_tag: "República do Irã"
  PER_republic_tag_DEF: "a República do Irã"
  PER_republic_tag_ADJ: "Iraniano"
- PER_free_republic: "Forças Livres do Irã"
- PER_free_republic_DEF: "as Forças Livres do Irã"
- PER_free_republic_ADJ: "Iraniano"
  BLC_jandullah: "Jundallah"
  BLC_jandullah_DEF: "Jundallah"
  BLC_jandullah_ADJ: "Balúchi"
  PER_ASMLA: "ASMLA"
  PER_ASMLA_DEF: "ASMLA"
  PER_ASMLA_ADJ: "Arabistão"
- PER_pan_iranist_front: "Frente Iraniana Unificada"
- PER_pan_iranist_front_DEF: "a Frente Iraniana Unificada"
- PER_pan_iranist_front_ADJ: "Iraniano"
- PER_imperial_restoration_movement: "Coalizão Imperial"
- PER_imperial_restoration_movement_DEF: "a Coalizão Imperial"
- PER_imperial_restoration_movement_ADJ: "Iraniano"
  south_azeri_tag: "Azerbaijão do Sul"
  south_azeri_tag_DEF: "o Azerbaijão do Sul"
  south_azeri_tag_ADJ: "Azeri Sul"
@@ -1428,93 +1413,6 @@
  PER_Zoroastrian_Empire_Flag: "Iranshahr"
  PER_Zoroastrian_Empire_Flag_DEF: "Iranshahr"
  PER_Zoroastrian_Empire_Flag_ADJ: "Iraniano"
- PER_ARTESH_CONTROL: "Autoridade Artesh do Irã"
- PER_ARTESH_CONTROL_DEF: "a Autoridade Artesh do Irã"
- PER_ARTESH_CONTROL_ADJ: "Iraniano"
- SYR_ARTESH_CONTROL: "Autoridade Artesh Síria"
- SYR_ARTESH_CONTROL_DEF: "a Autoridade Artesh Síria"
- SYR_ARTESH_CONTROL_ADJ: "Sírio"
- IRQ_ARTESH_CONTROL: "Autoridade Artesh Iraquiana"
- IRQ_ARTESH_CONTROL_DEF: "a Autoridade Artesh Iraquiana"
- IRQ_ARTESH_CONTROL_ADJ: "Iraquiano"
- TUR_ARTESH_CONTROL: "Autoridade Artesh Turca"
- TUR_ARTESH_CONTROL_DEF: "a Autoridade Artesh Turca"
- TUR_ARTESH_CONTROL_ADJ: "Turco"
- PAK_ARTESH_CONTROL: "Autoridade Artesh Paquistanesa"
- PAK_ARTESH_CONTROL_DEF: "a Autoridade Artesh Paquistanesa"
- PAK_ARTESH_CONTROL_ADJ: "Paquistanês"
- AFG_ARTESH_CONTROL: "Autoridade Artesh Afegã"
- AFG_ARTESH_CONTROL_DEF: "a Autoridade Artesh Afegã"
- AFG_ARTESH_CONTROL_ADJ: "Afegão"
- ARM_ARTESH_CONTROL: "Autoridade Artesh Armênia"
- ARM_ARTESH_CONTROL_DEF: "a Autoridade Artesh Armênia"
- ARM_ARTESH_CONTROL_ADJ: "Armênio"
- AZE_ARTESH_CONTROL: "Autoridade Artesh Azeri"
- AZE_ARTESH_CONTROL_DEF: "a Autoridade Artesh Azeri"
- AZE_ARTESH_CONTROL_ADJ: "Azeri"
- TRK_ARTESH_CONTROL: "Autoridade Artesh Turcomena"
- TRK_ARTESH_CONTROL_DEF: "a Autoridade Artesh Turcomena"
- TRK_ARTESH_CONTROL_ADJ: "Turcomeno"
- KUR_ARTESH_CONTROL: "Autoridade Artesh Curda"
- KUR_ARTESH_CONTROL_DEF: "a Autoridade Artesh Curda"
- KUR_ARTESH_CONTROL_ADJ: "Curdo"
- PER_IRQ_GOVERNATE: "Governadoria Iraniana do Iraque"
- PER_IRQ_GOVERNATE_ADJ: "a Governadoria Iraniana do Iraque"
- PER_IRQ_GOVERNATE_DEF: "Iraquiano"
- PER_SYR_GOVERNATE: "Governadoria Iraniana da Síria"
- PER_SYR_GOVERNATE_ADJ: "a Governadoria Iraniana da Síria"
- PER_SYR_GOVERNATE_DEF: "Sírio"
- PER_KUR_GOVERNATE: "Governadoria Iraniana do Curdistão"
- PER_KUR_GOVERNATE_ADJ: "a Governadoria Iraniana do Curdistão"
- PER_KUR_GOVERNATE_DEF: "Curdo"
- PER_TUR_GOVERNATE: "Governadoria Iraniana da Turquia"
- PER_TUR_GOVERNATE_ADJ: "a Governadoria Iraniana da Turquia"
- PER_TUR_GOVERNATE_DEF: "Turco"
- PER_TRK_GOVERNATE: "Governadoria Iraniana do Turcomenistão"
- PER_TRK_GOVERNATE_ADJ: "a Governadoria Iraniana do Turcomenistão"
- PER_TRK_GOVERNATE_DEF: "Turcomeno"
- PER_UZB_GOVERNATE: "Governadoria Iraniana do Uzbequistão"
- PER_UZB_GOVERNATE_ADJ: "a Governadoria Iraniana do Uzbequistão"
- PER_UZB_GOVERNATE_DEF: "Uzbeque"
- PER_AZE_GOVERNATE: "Governadoria Iraniana do Azerbaijão"
- PER_AZE_GOVERNATE_ADJ: "a Governadoria Iraniana do Azerbaijão"
- PER_AZE_GOVERNATE_DEF: "Azeri"
- PER_ARM_GOVERNATE: "Governadoria Iraniana da Armênia"
- PER_ARM_GOVERNATE_ADJ: "a Governadoria Iraniana da Armênia"
- PER_ARM_GOVERNATE_DEF: "Armênio"
- PER_GEO_GOVERNATE: "Governadoria Iraniana da Geórgia"
- PER_GEO_GOVERNATE_ADJ: "a Governadoria Iraniana da Geórgia"
- PER_GEO_GOVERNATE_DEF: "Georgiano"
- PER_PAK_GOVERNATE: "Governadoria Iraniana do Paquistão"
- PER_PAK_GOVERNATE_ADJ: "a Governadoria Iraniana do Paquistão"
- PER_PAK_GOVERNATE_DEF: "Paquistanês"
- PER_AFG_GOVERNATE: "Governadoria Iraniana do Afeganistão"
- PER_AFG_GOVERNATE_ADJ: "a Governadoria Iraniana do Afeganistão"
- PER_AFG_GOVERNATE_DEF: "Afegão"
- PER_TAJ_GOVERNATE: "Governadoria Iraniana do Tajiquistão"
- PER_TAJ_GOVERNATE_ADJ: "a Governadoria Iraniana do Tajiquistão"
- PER_TAJ_GOVERNATE_DEF: "Tajique"
- PER_JOR_GOVERNATE: "Governadoria Iraniana da Jordânia"
- PER_JOR_GOVERNATE_ADJ: "a Governadoria Iraniana da Jordânia"
- PER_JOR_GOVERNATE_DEF: "Árabe"
- PER_LEB_GOVERNATE: "Governadoria Iraniana do Líbano"
- PER_LEB_GOVERNATE_ADJ: "a Governadoria Iraniana do Líbano"
- PER_LEB_GOVERNATE_DEF: "Árabe"
- PER_BHR_GOVERNATE: "Governadoria Iraniana do Bahrein"
- PER_BHR_GOVERNATE_ADJ: "a Governadoria Iraniana do Bahrein"
- PER_BHR_GOVERNATE_DEF: "Árabe"
- PER_UAE_GOVERNATE: "Governadoria Iraniana dos Emirados Árabes Unidos"
- PER_UAE_GOVERNATE_ADJ: "a Governadoria Iraniana dos Emirados Árabes Unidos"
- PER_UAE_GOVERNATE_DEF: "Árabe"
- PER_PAL_GOVERNATE: "Governadoria Iraniana da Palestina"
- PER_PAL_GOVERNATE_ADJ: "a Governadoria Iraniana da Palestina"
- PER_PAL_GOVERNATE_DEF: "Árabe"
- PER_ISR_GOVERNATE: "Governadoria Iraniana de Israel"
- PER_ISR_GOVERNATE_ADJ: "a Governadoria Iraniana de Israel"
- PER_ISR_GOVERNATE_DEF: "Israelense"
- PER_EGY_GOVERNATE: "Governadoria Iraniana do Egito"
- PER_EGY_GOVERNATE_ADJ: "a Governadoria Iraniana do Egito"
- PER_EGY_GOVERNATE_DEF: "Egípcio"
  IRQ_sunni_revolt_name: "Frente da Liberdade Iraquiana"
  IRQ_sunni_revolt_name_DEF: "a Frente da Liberdade Iraquiana"
  IRQ_sunni_revolt_name_ADJ: "Iraquiano"
@@ -3701,3 +3599,6 @@
  Nazbols_SLO: "República Social Nacionalista Eslovaca"
  Nazbols_BOS: "República Social Nacionalista da Bósnia"
  Nazbols_CRO: "República Socialista da Croácia"
+ PER_REB: "Conselho Revolucionário do Irã"
+ PER_REB_DEF: "Conselho Revolucionário do Irã"
+ PER_REB_ADJ: "Iraniano"
