--- a/localisation/braz_por/MD_focus_GER_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_GER_l_braz_por.yml
@@ -2049,8 +2049,8 @@
  GER_upgraded_mining_equipment: "Equipamento de mineração atualizado"
  GER_generic_spending_laws: "Orçamento Público do Governo"
  GER_generic_spending_laws_desc: "O orçamento público do governo são os fundos fiscais públicos que fornecem financiamento ao nosso setor de serviços públicos, que inclui; §Ysaúde§!, §Yeducação§! & §Ysegurança interna§!."
- GER_Bundeswehr_modifier: "forças Armadas"
- GER_Bundeswehr_modifier_desc: "Este Modificador mostra todos os benefícios que você obtém para o seu Exército a partir do foco"
+ GER_Bundeswehr_modifier: "Estado da Bundeswehr"
+ GER_Bundeswehr_modifier_desc: "Este modificador mostrará todos os benefícios que você obtém para o Bundeswehr (Exército) com os focos que você realiza"
  GER_great_negative_opinion: "§RÓtima opinião negativa§!"
  GER_slight_negative_opinion: "§tLeve opinião negativa§!"
  GER_very_slight_negative_opinion: "§tVexry ligeira opinião negativa§!"
@@ -2614,3 +2614,7 @@
  GER_breach_of_contract_opinion_III: "Suspender Limites do Acordo Final"
  GER_agenda_2010: "Agenda de 2010"
  GER_agenda_2010_desc: "Gerhard Schröder sempre foi um moderado entre os social-democratas e, portanto, defendeu a contenção orçamentária. A 'Agenda 2010' é um projecto ambicioso de cortes orçamentais e reformas burocráticas que irá sem dúvida atrair fortes críticas de grupos de esquerda e empurrar o governo para o centro - mas poderá ser fantástico para o progresso económico."
+ GER_strengthen_the_service_sector: "Fortalecer o Setor de Serviços"
+ GER_strengthen_the_service_sector_desc: "Temos de reforçar o sector dos serviços para modernizarmos totalmente a nossa economia."
+ GER_european_business_opportunities: "Oportunidades de negócios europeias"
+ GER_european_business_opportunities_desc: "Ao abrir a nossa economia ao resto da Europa, seremos capazes de utilizar plenamente os investimentos e as oportunidades proporcionadas pelo novo conjunto de investimentos."
