--- a/localisation/braz_por/MD_focus_IRQ_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_IRQ_l_braz_por.yml
@@ -1905,3 +1905,39 @@
  IRQ_anti_iran_stance: "NÃO é um grupo §HPró-Iraniano§! [PER.GetFlag]"
  IRQ_mek_revolted_already: "MEK Já Revoltou"
  IRQ_war_with_shias: "Guerra com xiitas"
+ iraq_md.100.t: "Iraque instala governo xiita"
+ iraq_md.100.d: "O povo iraquiano derrubou o Estado dominante e instalou o seu próprio governo xiita. Esta medida traz um vislumbre de esperança, pois podemos mais uma vez tentar restaurar os nossos amigos iranianos ao seu antigo modo de vida."
+ iraq_md.100.a: "Nós devemos fazer isso"
+ iraq_md.100.b: "Não, é uma má ideia"
+ iraq_md.101.t: "Hezbollah envia um pedido"
+ iraq_md.101.d: "O Hezbollah enviou-nos uma oferta muito interessante, está a pedir-nos a nossa ajuda para restaurar a antiga República Islâmica, abrindo potencialmente espaço para uma aliança maior na região."
+ iraq_md.101.a: "Nós devemos fazer isso"
+ iraq_md.101.b: "Não, é uma má ideia"
+ iraq_md.102.t: "[FROM.GetName]Aceita"
+ iraq_md.102.d: "O governo de [FROM.GetName] aceitou nosso pedido e se unirá em armas contra o tirano, [PER.GetLeader]. Em breve, a nossa Irmandade Islâmica levantar-se-á mais uma vez no Irão!"
+ iraq_md.102.a: "Avante!"
+ iraq_md.103.t: "[FROM.GetName]Rejeita"
+ iraq_md.103.d: "O governo de [FROM.GetName] rejeitou nosso apelo para nos unirmos em armas contra o tirano, [PER.GetLeader]. Talvez em outro momento possamos obtê-los nós mesmos."
+ iraq_md.103.a: "Droga"
+ iraq_md.104.t: "O Dia de Ação"
+ iraq_md.104.d: "Hoje será o dia da ação, que o mundo nunca esquecerá. A República Islâmica ressurgirá como potência dominante no Irão e os infiéis serão expulsos."
+ iraq_md.104.a: "É Hora"
+ iraq_md.104.b: "Na verdade, mudei de ideia"
+ iraq_md.105.t: "Eixo de Resistência conspira contra nós!"
+ iraq_md.105.d: "O Eixo da Resistência, liderado pelo Hezbollah, convidou o Iraque para a sua facção há pouco tempo. Isto ocorre no momento em que a revolução no Iraque tira o controlo das mãos dos americanos. Agora, os relatórios sugerem que o Eixo da Resistência planeia uma operação para derrubar o nosso governo e reinstalar a República Islâmica. Supostamente, após a nossa revolução, várias unidades do IRGC fugiram para diferentes partes do Médio Oriente, permanecendo em grande parte indetectadas. Poderemos ser confrontados com suas unidades quando chegar a hora."
+ iraq_md.105.a: "O que?"
+ IRQ_will_lead_us_to_war_TT: "§RSeremos arrastados para o conflito com o Irão quando o Hezbollah desencadear a guerra!§!"
+ iraq_md.200.t: "Presença americana no Iraque"
+ iraq_md.200.d: "A missão americana na nossa nação está em curso há muitos anos e, na opinião do nosso povo, a sua permanência aqui deve chegar ao fim. Apesar de algumas delegações americanas insistirem que a sua presença é necessária para combater o terrorismo e o extremismo, vemos de forma diferente. Já é hora de nosso governo fazer uma escolha sobre esse assunto."
+ iraq_md.200.a: "Envie-lhes o pedido"
+ iraq_md.200.b: "A hora não está certa"
+ iraq_md.201.t: "O governo iraquiano solicita a nossa retirada"
+ iraq_md.201.d: "O governo iraquiano solicitou a retirada das nossas forças do seu país, alegando que a nossa missão há muito estava prestes a ser encerrada. Os seus diplomatas asseguraram-nos que o Estado é capaz de funcionar completamente por si só, não necessitando da nossa assistência para manter o Estado iraquiano."
+ iraq_md.201.a: "Vamos trazer nossos meninos para casa"
+ iraq_md.201.b: "Não, eles ainda não estão prontos"
+ iraq_md.202.t: "Estados Unidos retiram suas forças"
+ iraq_md.202.d: "Os Estados Unidos decidiram concordar com o nosso pedido e começaram a retirar as suas tropas. A retirada será gradual, mas já assinaram a transferência de todos os cargos governamentais actualmente ocupados por especialistas americanos."
+ iraq_md.202.a: "Finalmente！"
+ iraq_md.203.t: "Estados Unidos se recusam a retirar-se"
+ iraq_md.203.d: "O governo americano recusou o nosso pedido, alegando que o nosso governo não está preparado para manter um controlo estável sobre o governo."
+ iraq_md.203.a: "Infeliz"
