--- a/localisation/french/MD_countries_cosmetic_l_french.yml
+++ b/localisation/french/MD_countries_cosmetic_l_french.yml
@@ -1371,23 +1371,17 @@
  UNITED_ISLAMIC_REPUBLICS: "Républiques islamiques unies"
  UNITED_ISLAMIC_REPUBLICS_ADJ: "musulman"
  UNITED_ISLAMIC_REPUBLICS_DEF: "les Républiques islamiques unies"
- PER_interim_government: "Iran révolutionnaire"
- PER_interim_government_DEF: "Iran révolutionnaire"
- PER_interim_government_ADJ: "iranien"
  PER_iranic_federation: "Confédération iranienne"
  PER_iranic_federation_DEF: "la Confédération iranienne"
  PER_iranic_federation_ADJ: "iranique"
- PER_highway_nation: "État impérial du Highwaystan"
- PER_highway_nation_DEF: "l'État impérial du Highwaystan"
- PER_highway_nation_ADJ: "highwaystani"
  IKR_pjak_state: "Parti de la Vie Kurde"
  IKR_pjak_state_DEF: "le Parti de la Vie Kurde"
  IKR_pjak_state_ADJ: "kurde"
  PER_mek_flag: "CNRI"
  PER_mek_flagt_DEF: "CNRI"
  PER_mek_flag_ADJ: "iranien"
- PER_mullahs_government: "République islamique d'Iran"
- PER_mullahs_government_DEF: "République islamique d'Iran"
+ PER_mullahs_government: "Comité de Résistance de la République Islamique"
+ PER_mullahs_government_DEF: "Comité de Résistance de la République Islamique"
  PER_mullahs_government_ADJ: "iranien"
  PER_komola: "Komala"
  PER_komola_DEF: "Komala"
@@ -1398,114 +1392,18 @@
  PER_republic_tag: "République d'Iran"
  PER_republic_tag_DEF: "la République d'Iran"
  PER_republic_tag_ADJ: "iranien"
- PER_free_republic: "Forces libres d'Iran"
- PER_free_republic_DEF: "les Forces libres d'Iran"
- PER_free_republic_ADJ: "iranien"
  BLC_jandullah: "Jundallah"
  BLC_jandullah_DEF: "Jundallah"
  BLC_jandullah_ADJ: "baloutches"
  PER_ASMLA: "ASMLA"
  PER_ASMLA_DEF: "ASMLA"
  PER_ASMLA_ADJ: "arabistanais"
- PER_pan_iranist_front: "Front Iranien Unifié"
- PER_pan_iranist_front_DEF: "le Front Iranien Unifié"
- PER_pan_iranist_front_ADJ: "iranien"
- PER_imperial_restoration_movement: "Coalition Impériale"
- PER_imperial_restoration_movement_DEF: "la Coalition Impériale"
- PER_imperial_restoration_movement_ADJ: "iranien"
  south_azeri_tag: "Azerbaïdjan du Sud"
  south_azeri_tag_DEF: "Azerbaïdjan du Sud"
  south_azeri_tag_ADJ: "sud-azerbaïdjanais"
  south_azeri_liberation_movement: "Mouvement de libération de l'Azerbaïdjan du Sud"
  south_azeri_liberation_movement_DEF: "Mouvement de libération de l'Azerbaïdjan du Sud"
  south_azeri_liberation_movement_ADJ: "sud-azerbaïdjanais"
- PER_ARTESH_CONTROL: "Autorité Artesh d'Iran"
- PER_ARTESH_CONTROL_DEF: "l'Autorité Artesh d'Iran"
- PER_ARTESH_CONTROL_ADJ: "iranien"
- SYR_ARTESH_CONTROL: "Autorité syrienne d'Artesh"
- SYR_ARTESH_CONTROL_DEF: "l'Autorité syrienne d'Artesh"
- SYR_ARTESH_CONTROL_ADJ: "syrien"
- IRQ_ARTESH_CONTROL: "Autorité irakienne d'Artesh"
- IRQ_ARTESH_CONTROL_DEF: "l'Autorité irakienne d'Artesh"
- IRQ_ARTESH_CONTROL_ADJ: "irakien"
- TUR_ARTESH_CONTROL: "Autorité turque d'Artesh"
- TUR_ARTESH_CONTROL_DEF: "l'Autorité turque d'Artesh"
- TUR_ARTESH_CONTROL_ADJ: "turc"
- PAK_ARTESH_CONTROL: "Autorité pakistanaise d'Artesh"
- PAK_ARTESH_CONTROL_DEF: "l'Autorité pakistanaise d'Artesh"
- PAK_ARTESH_CONTROL_ADJ: "pakistanais"
- AFG_ARTESH_CONTROL: "Autorité afghane d'Artesh"
- AFG_ARTESH_CONTROL_DEF: "l'Autorité afghane d'Artesh"
- AFG_ARTESH_CONTROL_ADJ: "afghan"
- ARM_ARTESH_CONTROL: "Autorité arménienne d'Artesh"
- ARM_ARTESH_CONTROL_DEF: "l'Autorité arménienne d'Artesh"
- ARM_ARTESH_CONTROL_ADJ: "armenien"
- AZE_ARTESH_CONTROL: "Autorité azérie de l'Artesh"
- AZE_ARTESH_CONTROL_DEF: "l'Autorité azérie de l'Artesh"
- AZE_ARTESH_CONTROL_ADJ: "azérien"
- TRK_ARTESH_CONTROL: "Autorité turkmène d'Artesh"
- TRK_ARTESH_CONTROL_DEF: "l'Autorité turkmène d'Artesh"
- TRK_ARTESH_CONTROL_ADJ: "turkmène"
- KUR_ARTESH_CONTROL: "Autorité kurde d'Artesh"
- KUR_ARTESH_CONTROL_DEF: "l'Autorité kurde d'Artesh"
- KUR_ARTESH_CONTROL_ADJ: "kurde"
- PER_IRQ_GOVERNATE: "Gouvernorat iranien d'Irak"
- PER_IRQ_GOVERNATE_ADJ: "le Gouvernorat iranien d'Irak"
- PER_IRQ_GOVERNATE_DEF: "irakien"
- PER_SYR_GOVERNATE: "Gouvernorat iranien de Syrie"
- PER_SYR_GOVERNATE_ADJ: "le Gouvernorat iranien de Syrie"
- PER_SYR_GOVERNATE_DEF: "syrien"
- PER_KUR_GOVERNATE: "Gouvernorat iranien du Kurdistan"
- PER_KUR_GOVERNATE_ADJ: "le Gouvernorat iranien du Kurdistan"
- PER_KUR_GOVERNATE_DEF: "kurde"
- PER_TUR_GOVERNATE: "Gouvernorat iranien de Turquie"
- PER_TUR_GOVERNATE_ADJ: "le Gouvernorat iranien de Turquie"
- PER_TUR_GOVERNATE_DEF: "turc"
- PER_TRK_GOVERNATE: "Gouvernorat iranien du Turkménistan"
- PER_TRK_GOVERNATE_ADJ: "le Gouvernorat iranien du Turkménistan"
- PER_TRK_GOVERNATE_DEF: "turkmène"
- PER_UZB_GOVERNATE: "Gouvernorat iranien de l'Ouzbékistan"
- PER_UZB_GOVERNATE_ADJ: "le Gouvernorat iranien de l'Ouzbékistan"
- PER_UZB_GOVERNATE_DEF: "ouzbek"
- PER_AZE_GOVERNATE: "Gouvernorat iranien de l'Azerbaïdjan"
- PER_AZE_GOVERNATE_ADJ: "le Gouvernorat iranien de l'Azerbaïdjan"
- PER_AZE_GOVERNATE_DEF: "azérien"
- PER_ARM_GOVERNATE: "Gouvernorat iranien d'Arménie"
- PER_ARM_GOVERNATE_ADJ: "le Gouvernorat iranien d'Arménie"
- PER_ARM_GOVERNATE_DEF: "armenien"
- PER_GEO_GOVERNATE: "Gouvernorat iranien de Géorgie"
- PER_GEO_GOVERNATE_ADJ: "le Gouvernorat iranien de Géorgie"
- PER_GEO_GOVERNATE_DEF: "géorgien"
- PER_PAK_GOVERNATE: "Gouvernorat iranien du Pakistan"
- PER_PAK_GOVERNATE_ADJ: "le Gouvernorat iranien du Pakistan"
- PER_PAK_GOVERNATE_DEF: "pakistanais"
- PER_AFG_GOVERNATE: "Gouvernorat iranien d'Afghanistan"
- PER_AFG_GOVERNATE_ADJ: "le Gouvernorat iranien d'Afghanistan"
- PER_AFG_GOVERNATE_DEF: "afghan"
- PER_TAJ_GOVERNATE: "Gouvernorat iranien du Tadjikistan"
- PER_TAJ_GOVERNATE_ADJ: "le Gouvernorat iranien du Tadjikistan"
- PER_TAJ_GOVERNATE_DEF: "tadjik"
- PER_JOR_GOVERNATE: "Gouvernorat iranien de Jordanie"
- PER_JOR_GOVERNATE_ADJ: "le Gouvernorat iranien de Jordanie"
- PER_JOR_GOVERNATE_DEF: "arabe"
- PER_LEB_GOVERNATE: "Gouvernorat iranien du Liban"
- PER_LEB_GOVERNATE_ADJ: "le Gouvernorat iranien du Liban"
- PER_LEB_GOVERNATE_DEF: "arabe"
- PER_BHR_GOVERNATE: "Gouvernorat iranien de Bahreïn"
- PER_BHR_GOVERNATE_ADJ: "le Gouvernorat iranien de Bahreïn"
- PER_BHR_GOVERNATE_DEF: "arabe"
- PER_UAE_GOVERNATE: "Gouvernorat iranien des Émirats arabes unis"
- PER_UAE_GOVERNATE_ADJ: "le Gouvernorat iranien des Émirats arabes unis"
- PER_UAE_GOVERNATE_DEF: "arabe"
- PER_PAL_GOVERNATE: "Gouvernorat iranien de Palestine"
- PER_PAL_GOVERNATE_ADJ: "le Gouvernorat iranien de Palestine"
- PER_PAL_GOVERNATE_DEF: "arabe"
- PER_ISR_GOVERNATE: "Gouvernorat iranien d'Israël"
- PER_ISR_GOVERNATE_ADJ: "le Gouvernorat iranien d'Israël"
- PER_ISR_GOVERNATE_DEF: "israélien"
- PER_EGY_GOVERNATE: "Gouvernorat iranien d'Égypte"
- PER_EGY_GOVERNATE_ADJ: "le Gouvernorat iranien d'Égypte"
- PER_EGY_GOVERNATE_DEF: "égyptien"
  BAN_REB_democratic: "Forces armées bangladaises"
  BAN_REB_democratic_ADJ: "bangladais"
  BAN_REB_democratic_DEF: "les Forces armées bangladaises"
@@ -3701,3 +3599,6 @@
  Nazbols_SLO: "République social-nationaliste slovaque"
  Nazbols_BOS: "République sociale-nationaliste de Bosnie"
  Nazbols_CRO: "République socialiste de Croatie"
+ PER_REB: "Conseil révolutionnaire d'Iran"
+ PER_REB_DEF: "Conseil révolutionnaire d'Iran"
+ PER_REB_ADJ: "iranien"
