--- a/localisation/french/MD_focus_African_Union_l_french.yml
+++ b/localisation/french/MD_focus_African_Union_l_french.yml
@@ -1,24 +1,24 @@
 ﻿l_french:
  african_union_common_political_agenda: "Agenda politique commun de l'Union africaine"
- african_union_common_political_agenda_desc: "The members of the African Union have agreed on a common political agenda and framework for the unification of Africa."
- african_union_child_welfare: "African Union: Child Welfare"
- african_union_child_welfare_desc: "The members of the African Union have agreed to improve child mortality rates and child welfare across all of Africa."
- african_union_improved_digitalisation: "African Union: Improved Digitalisation"
- african_union_improved_digitalisation_desc: "The members of the African Union have agreed to improve the level of digitalisation on the continent, investing in better internet infrastructure."
- african_union_human_rights_good_boy: "African Union: Human Rights Lauded"
- african_union_human_rights_good_boy_desc: "The members of the African Union have agreed to pay more attention to the status of human rights in Africa. This nation has been especially lauded for showing the way for other African nations with their good treatment (at least on an African scale) of its population."
- african_union_human_rights_bad_boy: "African Union: Human Rights Criticised"
- african_union_human_rights_bad_boy_desc: "The members of the African Union have agreed to pay more attention to the status of human rights in Africa. This nation has been chastised by the African Union due to their poor human rights status, bringing shame to the ruling regime."
- african_union_human_rights_bad_boy_no_elections_tt: "§RBecause we don't have elections, we get§!\n"
- african_union_human_rights_bad_boy_high_corruption_tt: "§RBecause our corruption is higher than $systematic_corruption$, we get§!\n"
- african_union_improved_trade_relations: "African Union: Improved Trade Relations"
- african_union_improved_trade_relations_desc: "The members of the African Union have agreed to negotiate favourable trade deals with developed countries together. The increased political weight behind the united African countries has allowed them to get better terms on trade."
- african_union_health_research: "African Union: Health Research"
- african_union_health_research_desc: "The members of the African Union have agreed to emphasize the importance of developing treatments for sickle-cell anaemia. Treating the disease is a key factor in increasing the survivability of malaria and HIV infections."
- african_union_cultural_independence: "African Union: Cultural Renaissance"
- african_union_cultural_independence_desc: "The members of the African Union have emphasized the need that all pillaged African historical and cultural artifacts should be returned to their respective owners. Some work has already been done (such as the Axum Obelisk being returned by Italy to Ethiopia), but there are still hundreds of pieces of African origin all over the world."
- african_union_encourage_domestic_agriculture: "African Union: Domestic Agriculture Encouraged"
- african_union_encourage_domestic_agriculture_desc: "The members of the African Union have agreed to work together to improve the agricultural sector of Africa, reducing its dependency on developed countries in the form of new technologies, seed producers and genetic resource banks."
+ african_union_common_political_agenda_desc: "Les membres de l'Union africaine se sont mis d'accord sur un programme et un cadre politiques communs pour l'unification de l'Afrique."
+ african_union_child_welfare: "Union africaine : Protection de l'enfance"
+ african_union_child_welfare_desc: "Les membres de l'Union africaine ont convenu d'améliorer les taux de mortalité infantile et le bien-être des enfants dans toute l'Afrique."
+ african_union_improved_digitalisation: "Union africaine : Amélioration de la numérisation"
+ african_union_improved_digitalisation_desc: "Les membres de l'Union africaine ont convenu d'améliorer le niveau de numérisation sur le continent, en investissant dans une meilleure infrastructure internet."
+ african_union_human_rights_good_boy: "Union africaine : Le droits des homme salués"
+ african_union_human_rights_good_boy_desc: "Les membres de l'Union africaine ont convenu d'accorder une plus grande attention à la situation des droits de l'Homme en Afrique. Cette nation a été particulièrement louée pour avoir montré la voie aux autres nations africaines en traitant bien (du moins à l'échelle africaine) sa population."
+ african_union_human_rights_bad_boy: "Union africaine : Les droits de l'Homme critiqués"
+ african_union_human_rights_bad_boy_desc: "Les membres de l'Union africaine ont décidé d'accorder plus d'attention à la situation des droits de l'Homme en Afrique. Cette nation a été réprimandée par l'Union africaine en raison de son piètre statut en matière de droits de l'Homme, ce qui a jeté l'opprobre sur le régime en place."
+ african_union_human_rights_bad_boy_no_elections_tt: "§R Parce que nous n'avons pas d'élections, nous obtenons§! \n"
+ african_union_human_rights_bad_boy_high_corruption_tt: "§R Parce que notre corruption est plus élevée que $systematic_corruption$ on obtient §! \n"
+ african_union_improved_trade_relations: "Union africaine : Amélioration des relations commerciales"
+ african_union_improved_trade_relations_desc: "Les membres de l'Union africaine ont accepté de négocier ensemble des accords commerciaux favorables avec les pays développés. Le poids politique accru des pays africains unis leur a permis d'obtenir de meilleures conditions commerciales."
+ african_union_health_research: "Union africaine : Recherche en santé"
+ african_union_health_research_desc: "Les membres de l'Union africaine ont convenu de souligner l'importance de développer des traitements contre la drépanocytose. Le traitement de la maladie est un facteur clé pour augmenter les chances de survie aux infections par le paludisme et le VIH."
+ african_union_cultural_independence: "Union africaine : Renaissance culturelle"
+ african_union_cultural_independence_desc: "Les membres de l'Union africaine ont insisté sur la nécessité de restituer à leurs propriétaires respectifs tous les objets historiques et culturels africains pillés. Certaines mesures ont déjà été prises (comme la restitution de l'obélisque d'Axum par l'Italie à l'Éthiopie), mais il reste encore des centaines de pièces d'origine africaine dans le monde entier."
+ african_union_encourage_domestic_agriculture: "Union africaine : Encouragement de l'agriculture domestique"
+ african_union_encourage_domestic_agriculture_desc: "Les membres de l'Union africaine ont convenu de travailler ensemble pour améliorer le secteur agricole de l'Afrique, en réduisant sa dépendance à l'égard des pays développés sous la forme de nouvelles technologies, de producteurs de semences et de banques de ressources génétiques."
  african_union_aids_watch_funded: "African Union: AIDS Watch Africa"
  african_union_aids_watch_funded_desc: "The members of the African Union have agreed to increase the funding and visibility of AIDS Watch Africa. As this nation is suffering from an AIDS epidemic, their ability to combat the disease has been increased."
  african_union_aids_watch_funder: "African Union: AIDS Watch Africa"
@@ -27,13 +27,13 @@
  african_union_decade_of_education: "African Union: Decade Of Education"
  african_union_decade_of_education_desc: "The members of the African Union have dubbed the next years the 'Decade of Education' for Africa. The Union has an ambitious goal of increasing the education level across all Africa."
  african_union_declaration_of_fertilizers: "African Union: Centre For Fertilizer Development"
- african_union_declaration_of_fertilizers_desc: "The members of the African Union have increased their efforts in supporting the African Centre For Fertilizer Development in order to improve agricultural yields on the continent."
- african_union_research_focus: "African Union: Scientific Research For Development"
- african_union_research_focus_desc: "The members of the African Union have committed to an agenda of technological and scientific process for its members."
- african_union_renewable_investments: "African Union: Fight Against Climate Change"
- african_union_renewable_investments_desc: "The members of the African Union have committed to expanding the renewable capacities of the continent in order to fight climate change, which will undoubtedly cause its worst effects on Africa."
- african_union_industrial_development: "African Union: Industrial Development"
- african_union_industrial_development_desc: "The members of the African Union have agreed to work on methods to improve various industries in Africa. The main goal is to make African manufacturers more competitive on the global market."
+ african_union_declaration_of_fertilizers_desc: "Les membres de l'Union africaine ont redoublé d'efforts pour soutenir le Centre africain pour le développement des engrais afin d'améliorer les rendements agricoles sur le continent."
+ african_union_research_focus: "Union africaine : Recherche scientifique pour le développement"
+ african_union_research_focus_desc: "Les membres de l'Union africaine se sont engagés à mettre en place un programme de processus technologique et scientifique pour ses membres."
+ african_union_renewable_investments: "Union africaine : Lutte contre le changement climatique"
+ african_union_renewable_investments_desc: "Les membres de l'Union africaine se sont engagés à développer les capacités renouvelables du continent afin de lutter contre le changement climatique, qui aura sans aucun doute les pires effets sur l'Afrique."
+ african_union_industrial_development: "Union africaine : Développement industriel"
+ african_union_industrial_development_desc: "Les membres de l'Union africaine se sont mis d'accord pour travailler sur des méthodes visant à améliorer les différentes industries en Afrique. L'objectif principal est de rendre les fabricants africains plus compétitifs sur le marché mondial."
  african_union_health_care_investment: "African Union: Maternal, infant and child health"
  african_union_health_care_investment_desc: "The members of the African Union have prioritised the reduction of maternal, infant and child mortality rates on the continent together with the UN and their international partners."
  african_union_combat_human_trafficking: "African Union: Combating Human Trafficking"
