--- a/localisation/french/MD_focus_IRQ_l_french.yml
+++ b/localisation/french/MD_focus_IRQ_l_french.yml
@@ -1099,7 +1099,7 @@
  iraq_md.50.d: "Several Shi'ite organizations have begun protesting our recently implemented policies, and lack of support for the Shi'ite militias in the conflict against the Sunnis. They are trying to attempt massive rallies in an attempt to thwart our governments progress.."
  iraq_md.50.a: "Send in the Riot Police, Deadly Force is Not Authorized"
  iraq_md.50.b: "Send in the Riot Police, Deadly Force is Authorized"
- iraq_md.51.t: "Rioters Stage Plans insde of Mosques in Najaf and Karbala"
+ iraq_md.51.t: "Rioters Stage Plans inside of Mosques in Najaf and Karbala"
  iraq_md.51.d: "Shi'ite militants and groups have been using mosques within Najaf and Karbala to stage plans for their riots. This has been done largely without our knowledge this whole time.."
  iraq_md.51.a: "Block Transport to the Mosques"
  iraq_md.51.b: "Close and Garrison the Mosques"
@@ -1905,3 +1905,39 @@
  IRQ_controlled_instability_idea: "Controlled Instability"
  IRQ_mek_revolted_already: "MEK Revolted Already"
  IRQ_war_with_shias: "War with Shias"
+ iraq_md.100.t: "Iraq Installs Shi'ite Government"
+ iraq_md.100.d: "The Iraqi people have overthrown the ruling state, and installed their very own Shi'ite government. This move brings about a glimmer of hope, as we can once more, make an attempt to restore our Iranian friends to their former way of life."
+ iraq_md.100.a: "We must do it"
+ iraq_md.100.b: "No, it is a bad idea"
+ iraq_md.101.t: "Hezbollah Sends a Request"
+ iraq_md.101.d: "Hezbollah has sent us a very interesting offer, they are asking us for our help in restoring the former Islamic Republic, potentially opening up space for a greater alliance in the region."
+ iraq_md.101.a: "We must do it"
+ iraq_md.101.b: "No, it is a bad idea"
+ iraq_md.102.t: "[FROM.GetName] Accepts"
+ iraq_md.102.d: "The government of [FROM.GetName] has accepted our request, and will join up in arms against the tyrant, [PER.GetLeader]. Soon, our Islamic Brethern will rise up once more in Iran!"
+ iraq_md.102.a: "Forward!"
+ iraq_md.103.t: "[FROM.GetName] Rejects!"
+ iraq_md.103.d: "The government of [FROM.GetName] has rejected our plea to join up in arms against the tyrant, [PER.GetLeader]. Maybe at another time we will be able get them ourselves."
+ iraq_md.103.a: "Damn"
+ iraq_md.104.t: "The Day of Action"
+ iraq_md.104.d: "Today will be the day of action, one that the world will never forget. The Islamic Republic will re-emerge as the dominant power in Iran, and the infidels will be ousted."
+ iraq_md.104.a: "It's time"
+ iraq_md.104.b: "Actually, I changed my mind"
+ iraq_md.105.t: "Axis of Resistance Plots Against Us!"
+ iraq_md.105.d: "The Axis of Resistance, being spearheaded by Hezbollah, invited Iraq to their faction a little while ago. This comes as the revolution in Iraq sweeped up control out from under the Americans. Now reports are suggesting that the Axis of Resistance plans an operation to oust our government, and re-install the Islamic Republic. Alledgedly, following our revolution several units of the IRGC fled to different parts of the middle east remaining largely undetected. We may be confronted with their units when the time comes."
+ iraq_md.105.a: "What?"
+ IRQ_will_lead_us_to_war_TT: "§RWe will be dragged into the conflict with Iran when Hezbollah triggers the war!§!"
+ iraq_md.200.t: "American Presence in Iraq"
+ iraq_md.200.d: "The American mission in our nation has been ongoing for many years, and in the view of our people, their stay here must come to an end. Despite some American delegation insisting that their presence is necessary in order to combat terrorism and extremism, we see differently. It's about time that our government makes a choice on this matter."
+ iraq_md.200.a: "Send them the request"
+ iraq_md.200.b: "The time is not right"
+ iraq_md.201.t: "Iraqi Government Requests Our Withdrawal"
+ iraq_md.201.d: "The Iraqi government has requested that withdraw our forces from their nation, citing that our mission has been long due for a closure. Their diplomats have assured us that the state is able to completely operate on its own, not being in need of our assistance to maintain the Iraqi state."
+ iraq_md.201.a: "Let's bring our boys home"
+ iraq_md.201.b: "No, they are not ready yet"
+ iraq_md.202.t: "United States Withdraws It's Forces"
+ iraq_md.202.d: "The United States has decided to agree with our request, and have began withdrawing their troops. The withdrawal will be gradual, but they have already signed into effect the transfer of all government posts currently manned by American experts."
+ iraq_md.202.a: "Finally!"
+ iraq_md.203.t: "United States Refuses to Withdraw"
+ iraq_md.203.d: "The American government has refused our request, citing that our government is not prepared to maintain stable control over the government."
+ iraq_md.203.a: "Unfortunate"
