--- a/localisation/french/countries_l_french.yml
+++ b/localisation/french/countries_l_french.yml
@@ -2883,8 +2883,8 @@
  PAR_nationalist_ADJ: "paraguayen"
  PER_fascism: "Iran"
  PER_fascism_DEF: "l'Iran"
- PER_democratic: "République d'Iran"
- PER_democratic_DEF: "la République d'Iran"
+ PER_democratic: "Iran"
+ PER_democratic_DEF: "Iran"
  PER_neutrality: "Iran"
  PER_neutrality_DEF: "l'Iran"
  PER_communism: "Iran"
