--- a/localisation/polish/MD_focus_African_Union_l_polish.yml
+++ b/localisation/polish/MD_focus_African_Union_l_polish.yml
@@ -155,11 +155,11 @@
  AFRICAN_UNION_shared_focus_fight_corruption: "Walcz z korupcją"
  AFRICAN_UNION_shared_focus_fight_corruption_desc: "Korupcja szerzy się w Afryce i jest jedną z największych przeszkód w tworzeniu zjednoczonego kraju. Musimy ciężko pracować, aby wyeliminować wszelkie podejrzane interesy ze świata biznesu i polityki."
  AFRICAN_UNION_shared_focus_fight_corruption_tt: "Zmodyfikuj §Y$african_union_reforms_modifier$§! by\n$corruption_cost_factor$: [?african_union_corruption_cost_factor_temp|=-%]"
- AFRICAN_UNION_shared_focus_fight_corruption_tt_2: "§GCountries with low §YCorruption§! (level 5 or lower) will be more likely to accept African Unification§!\n§RCountries with high §YCorruption§! (level 6 or higher) will be less likely to accept African Unification§!\n\n"
+ AFRICAN_UNION_shared_focus_fight_corruption_tt_2: "§GKraje o niskim §YKorupcji§! (poziom 5 lub niższy) z większym prawdopodobieństwem zaakceptują zjednoczenie Afryki§!\n§RKraje o wysokiej §YKorupcji§! (poziom 6 lub wyższy) będzie mniej skłonny zaakceptować zjednoczenie Afryki§!\n\n"
  AFRICAN_UNION_shared_focus_embrace_corruption: "Przyjmij Korupcję"
  AFRICAN_UNION_shared_focus_embrace_corruption_desc: "Powinniśmy po prostu zaakceptować fakt, że korupcja jest częścią biznesu i polityki w Afryce. Tak po prostu jest. Czym to się różni od krajów rozwiniętych, które nazywają to \"lobbingiem\"?"
  AFRICAN_UNION_shared_focus_embrace_corruption_tt: "Zmodyfikuj §Y$african_union_reforms_modifier$§! by\n$corruption_cost_factor$: [?african_union_corruption_cost_factor_temp|=-%]\n$MODIFIER_POLITICAL_POWER_FACTOR$: [?african_union_political_power_factor_temp|=+%]"
- AFRICAN_UNION_shared_focus_embrace_corruption_tt_2: "§GCountries with high §YCorruption§! (level 6 or higher) will be more likely to accept African Unification§!\n§RCountries with low §YCorruption§! (level 5 or lower) will be less likely to accept African Unification§!\n\n"
+ AFRICAN_UNION_shared_focus_embrace_corruption_tt_2: "§GKraje o wysokiej §YKorupcji§! (poziom 6 lub wyższy) z większym prawdopodobieństwem zaakceptują zjednoczenie Afryki§!\n§RKraje o niskim §YKorupcji§! (poziom 5 lub niższy) będzie mniej skłonny zaakceptować zjednoczenie Afryki§!\n\n"
  AFRICAN_UNION_shared_focus_pan_african_university: "Uniwersytet Panafrykański"
  AFRICAN_UNION_shared_focus_pan_african_university_desc: "Musimy stworzyć sieć uniwersytetów afrykańskich, aby mogły opracowywać programy nauczania i podnosić jakość edukacji na całym kontynencie."
  AFRICAN_UNION_shared_focus_pan_african_university_tt: "Zmodyfikuj §Y$african_union_reforms_modifier$§! przez\n$education_cost_multiplier_modifier$: [?african_union_education_cost_multiplier_modifier_temp|=-%]"
@@ -180,11 +180,11 @@
  AFRICAN_UNION_shared_focus_unite_africa: "Zjednocz Afrykę"
  AFRICAN_UNION_shared_focus_unite_africa_desc: "Nadszedł czas! Musimy teraz zjednoczyć Afrykę w jeden kraj i popchnąć kontynent w przyszłość, o jakiej nikt nie mógł marzyć"
  AFRICAN_UNION_shared_focus_unite_africa_trigger_tt: "Żadne §Ypaństwo członkowskie§! nie jest w stanie wojny"
- AFRICAN_UNION_shared_focus_unite_africa_tt: "\n§YEvery member state will be invited to join a unified Africa§!\n\n§GCountries are more likely to accept if:\n- They have the same §YOutlook§!\n- Their opinion of us is higher than §Y+50§!§!\n\n§RCountries are less likely to accept if:\n- They are §YWestern§! and we are §YEmerging§!, or vice-versa\n- They are §YSalafist§! or §YNationalist§!, and we are not\n- Their opinion of us is lower than §Y-50§!§!\n\n§YThe likelihood of accepting will also be impacted by previous focus choices§!"
+ AFRICAN_UNION_shared_focus_unite_africa_tt: "\n§YKażde państwo członkowskie zostanie zaproszone do przyłączenia się do zjednoczonej Afryki§!\n\n§GKraje chętniej akceptują „jeśli”:\n- Mają ten sam §YOutlook§!\n- Ich opinia o nas jest wyższa niż §Y+50§!§!\n\n§RKraje rzadziej akceptują „jeśli”:\n- Są §YZachodnie§! i jesteśmy §YEmerging§! lub odwrotnie\n- Oni są §YSalafitami§! lub §YNacjonalista§!, a my nimi nie jesteśmy\n- Ich opinia o nas jest niższa niż §Y-50§!§!\n\n§YNa prawdopodobieństwo akceptacji będą miały także wpływ wcześniejsze wybory, na których się skupisz§!"
  african_union_decisions_category: "Unia Afrykańska"
- african_union_decisions_category_desc: "The African Union has the goal of bringing the continent of Africa closer together economically, politically and culturally. The Union is made up of various sub-organisations that help African countries work together to achieve common goals. The eventual goal of the Union is to bring the continent together in an EU-like confederation, or even federation.\n\nEach year, the African Union will hold a §YSummit§! with a theme and agenda for the next year. Each summit will grant the African Union a §YMandate§!. Any §YRegional Power§! in Africa can use the §YMandate§! to complete an African Union related focus, granted that the majority of the African population follow their Outlook.\n\nMandate: [african_union_mandate_status]\n\nCurrent Outlooks:\nWestern: [?african_union_western_outlook|0] million people ([?african_union_western_outlook_share|%0])\nEmerging: [?african_union_emerging_outlook|0] million people ([?african_union_emerging_outlook_share|%0])\nSalafism: [?african_union_salafist_outlook|0] million people ([?african_union_salafist_outlook_share|%0])\nNon-Aligned: [?african_union_nonaligned_outlook|0] million people ([?african_union_nonaligned_outlook_share|%0])\nNationalist: [?african_union_nationalist_outlook|0] million people ([?african_union_nationalist_outlook_share|%0])\n\nAverage GDP/capita: $$§Y[?average_gdp_of_africa]§!b"
- african_union_mandate_status_green: "§GGranted§!"
- african_union_mandate_status_red: "§RNot granted§!"
+ african_union_decisions_category_desc: "Celem Unii Afrykańskiej jest zbliżenie kontynentu afrykańskiego pod względem gospodarczym, politycznym i kulturowym. Unia składa się z różnych podorganizacji, które pomagają krajom afrykańskim współpracować na rzecz osiągnięcia wspólnych celów. Ostatecznym celem Unii jest zjednoczenie kontynentu w konfederację lub nawet federację na wzór UE.\n\nKażdego roku Unia Afrykańska organizuje §YSszczyt§! z tematem i programem na przyszły rok. Każdy szczyt przyzna Unii Afrykańskiej §YMandat§!. Dowolna §YWładza regionalna§! w Afryce mogą korzystać z §YMandatu§! dokończenie działań związanych z Unią Afrykańską, pod warunkiem, że większość ludności Afryki będzie podążać za swoją prognozą.\n\nMandat:[african_union_mandate_status]\n\nAktualne prognozy:\nZachodni:[?african_union_western_outlook|0] million people ([?african_union_western_outlook_share|%0])\nPojawiające się:[?african_union_emerging_outlook|0] million people ([?african_union_emerging_outlook_share|%0])\nSalafizm:[?african_union_salafist_outlook|0] million people ([?african_union_salafist_outlook_share|%0])\nNie wyrównany:[?african_union_nonaligned_outlook|0] million people ([?african_union_nonaligned_outlook_share|%0])\nNacjonalista:[?african_union_nationalist_outlook|0] million people ([?african_union_nationalist_outlook_share|%0])\n\nŚredni PKB/mieszkańca:$$§Y[?average_gdp_of_africa]§!b"
+ african_union_mandate_status_green: "§GNadany§!"
+ african_union_mandate_status_red: "§RNie przyznano§!"
  African_Union_join_the_union: "Dołącz do Unii Afrykańskiej"
  African_Union_join_the_union_desc: "Prawie wszyscy na kontynencie są częścią Unii Afrykańskiej. My też powinniśmy się przyłączyć i czerpać korzyści, póki jeszcze możemy."
  African_Union_leave_the_union: "Opuścić Unię Afrykańską"
@@ -328,13 +328,13 @@
  AfricanUnionSummit.28.d: "Podczas tegorocznego Szczytu Unii Afrykańskiej Zgromadzenie wezwało państwa członkowskie do poprawy infrastruktury dla handlu międzynarodowego. Kanał Sueski, Gibraltar i Przylądek Dobrej Nadziei to ważne szlaki handlu morskiego. Aby zapewnić płynny przepływ handlu w Afryce, należy rozbudować porty i stocznie."
  AfricanUnionSummit.28.a: "Dla Zjednoczonej Afryki"
  AFRICAN_UNION_is_joint_member_tt: "Jest niezawieszonym członkiem Unii Afrykańskiej"
- african_union_give_mandate_tt: "§GAn African Union Mandate is granted!§!\n"
- african_union_use_mandate_tt: "§RAn African Union Mandate is used!§!\n"
- african_union_use_mandate_extra_tt: "§GThis will not use an African Union Mandate!§!\n"
- african_union_give_extra_mandate_tt: "§GThe next African Union focus will not use up a Mandate§!"
- African_Union_formed_tt: "The §YOrganisation of African Unity§! has been reformed into the §YAfrican Union§!"
- can_do_african_union_focus_tt: "Our §YOutlook§! is the majority in Africa"
- african_union_available_mandate_tt: "We have an §YAfrican Union Mandate§!"
+ african_union_give_mandate_tt: "§GMandat Unii Afrykańskiej przyznany!§!\n"
+ african_union_use_mandate_tt: "§RWykorzystano mandat Unii Afrykańskiej!§!\n"
+ african_union_use_mandate_extra_tt: "§GTo nie będzie korzystać z mandatu Unii Afrykańskiej!§!\n"
+ african_union_give_extra_mandate_tt: "§GNastępny cel Unii Afrykańskiej nie wyczerpie mandatu§!"
+ African_Union_formed_tt: "§YOrganizacja Jedności Afrykańskiej§! została przekształcona w §YUnię Afrykańską§!"
+ can_do_african_union_focus_tt: "Nasz §YOutlook§! stanowi większość w Afryce"
+ african_union_available_mandate_tt: "Mamy §Ymandat Unii Afrykańskiej§!"
  TT_IF_THEY_ACCEPT: "Jeśli zaakceptują, to\n"
  african_union_peacekeeping_effort: "Unia Afrykańska: Wysiłek na rzecz utrzymania pokoju"
  african_union_peacekeeping_effort_desc: "Członkowie Unii Afrykańskiej zgodzili się skupić na zakończeniu konfliktów zbrojnych w Afryce."
