--- a/localisation/polish/MD_focus_GER_l_polish.yml
+++ b/localisation/polish/MD_focus_GER_l_polish.yml
@@ -2049,8 +2049,8 @@
  GER_upgraded_mining_equipment: "Ulepszony sprzęt górniczy"
  GER_generic_spending_laws: "Rządowy budżet publiczny"
  GER_generic_spending_laws_desc: "Budżet publiczny rządu to publiczne fundusze podatkowe, które zapewniają finansowanie naszego sektora usług publicznych, który obejmuje: §Opieka zdrowotna§!, §Edukacja§! & §YBezpieczeństwo wewnętrzne§!."
- GER_Bundeswehr_modifier: "Bundeswehra"
- GER_Bundeswehr_modifier_desc: "ten modyfikator pokazuje wszystkie korzyści, jakie zyskujesz dla swojej armii dzięki skupieniu"
+ GER_Bundeswehr_modifier: "Stan Bundeswehry"
+ GER_Bundeswehr_modifier_desc: "Ten modyfikator pokaże Ci wszystkie korzyści, jakie uzyskasz dla Bundeswehry (armii) w wyniku skupienia się na swoich działaniach"
  GER_great_negative_opinion: "§RWielka negatywna opinia§!"
  GER_slight_negative_opinion: "§tLekko negatywna opinia§!"
  GER_very_slight_negative_opinion: "§tBardzo niewielka negatywna opinia§!"
@@ -2614,3 +2614,7 @@
  GER_breach_of_contract_opinion_III: "Zawieszenie Ostatecznych Limitów Rozliczeniowych"
  GER_agenda_2010: "Porządek obrad 2010"
  GER_agenda_2010_desc: "Gerhard Schröder był zawsze umiarkowany wśród socjaldemokratów i dlatego opowiadał się za powściągliwością w budżecie. „Agenda 2010” to ambitny projekt cięć budżetowych i reform biurokratycznych, który niewątpliwie spotka się z ostrą krytyką ze strony ugrupowań lewicowych i popchnie rząd w stronę centrum, ale może być fantastyczny dla postępu gospodarczego."
+ GER_strengthen_the_service_sector: "Wzmocnić sektor usług"
+ GER_strengthen_the_service_sector_desc: "Aby w pełni zmodernizować naszą gospodarkę, musimy wzmocnić sektor usług."
+ GER_european_business_opportunities: "Europejskie możliwości biznesowe"
+ GER_european_business_opportunities_desc: "Otwierając naszą gospodarkę na resztę Europy, będziemy mogli w pełni wykorzystać inwestycje i możliwości, jakie daje nowa pula inwestycyjna."
