--- a/localisation/polish/MD_focus_IRQ_l_polish.yml
+++ b/localisation/polish/MD_focus_IRQ_l_polish.yml
@@ -1905,3 +1905,39 @@
  IRQ_anti_iran_stance: "NIE jest [PER.GetFlag] §HPro-irańskim§! Grupa"
  IRQ_mek_revolted_already: "MEK już się zbuntował"
  IRQ_war_with_shias: "Wojna z szyitami"
+ iraq_md.100.t: "Irak instaluje rząd szyicki"
+ iraq_md.100.d: "Naród iracki obalił państwo rządzące i zainstalował własny szyicki rząd. To posunięcie niesie ze sobą promyk nadziei, ponieważ możemy po raz kolejny podjąć próbę przywrócenia naszym irańskim przyjaciołom ich dawnego stylu życia."
+ iraq_md.100.a: "Musimy to zrobić"
+ iraq_md.100.b: "Nie, to zły pomysł"
+ iraq_md.101.t: "Hezbollah wysyła prośbę"
+ iraq_md.101.d: "Hezbollah przesłał nam bardzo interesującą ofertę, prosi nas o pomoc w odbudowie dawnej Republiki Islamskiej, potencjalnie otwierając przestrzeń dla większego sojuszu w regionie."
+ iraq_md.101.a: "Musimy to zrobić"
+ iraq_md.101.b: "Nie, to zły pomysł"
+ iraq_md.102.t: "[FROM.GetName]Akceptuje"
+ iraq_md.102.d: "Rząd [FROM.GetName] przyjął naszą prośbę i przyłączy się do broni przeciwko tyranowi [PER.GetLeader]. Wkrótce nasi islamscy bracia powstaną ponownie w Iranie!"
+ iraq_md.102.a: "Do przodu!"
+ iraq_md.103.t: "[FROM.GetName]Odrzuca"
+ iraq_md.103.d: "Rząd [FROM.GetName] odrzucił naszą prośbę o przyłączenie się do broni przeciwko tyranowi [PER.GetLeader]. Być może innym razem uda nam się je zdobyć sami."
+ iraq_md.103.a: "Cholera"
+ iraq_md.104.t: "Dzień Akcji"
+ iraq_md.104.d: "Dziś będzie dzień akcji, którego świat nigdy nie zapomni. Republika Islamska ponownie wyłoni się jako dominująca siła w Iranie, a niewierni zostaną wyparci."
+ iraq_md.104.a: "Już czas"
+ iraq_md.104.b: "Właściwie to zmieniłem zdanie"
+ iraq_md.105.t: "Oś Oporu spiskuje przeciwko nam!"
+ iraq_md.105.d: "Oś Oporu, na której czele stoi Hezbollah, jakiś czas temu zaprosiła Irak do swojej frakcji. Dzieje się tak, gdy rewolucja w Iraku wyrwała kontrolę Amerykanom. Obecnie doniesienia sugerują, że Oś Oporu planuje operację mającą na celu obalenie naszego rządu i ponowne zainstalowanie Republiki Islamskiej. Rzekomo po naszej rewolucji kilka jednostek IRGC uciekło do różnych części Bliskiego Wschodu, pozostając w dużej mierze niewykryte. Kiedy nadejdzie czas, możemy spotkać się z ich jednostkami."
+ iraq_md.105.a: "Co?"
+ IRQ_will_lead_us_to_war_TT: "§RZostaniemy wciągnięci w konflikt z Iranem, kiedy Hezbollah wywoła wojnę!§!"
+ iraq_md.200.t: "Obecność USA w Iraku"
+ iraq_md.200.d: "Misja amerykańska w naszym narodzie trwa już od wielu lat i w ocenie naszego narodu jego pobyt tutaj musi dobiec końca. Mimo że część delegacji amerykańskiej upierała się, że ich obecność jest konieczna w celu zwalczania terroryzmu i ekstremizmu, widzimy inaczej. Najwyższy czas, aby nasz rząd dokonał wyboru w tej sprawie."
+ iraq_md.200.a: "Wyślij im prośbę"
+ iraq_md.200.b: "Czas nie jest odpowiedni"
+ iraq_md.201.t: "Rząd iracki żąda naszego wycofania"
+ iraq_md.201.d: "Rząd iracki zażądał wycofania naszych sił z ich kraju, powołując się na to, że zamknięcie naszej misji było już dawno planowane. Ich dyplomaci zapewnili nas, że państwo jest w stanie całkowicie działać samodzielnie i nie potrzebuje naszej pomocy do utrzymania państwa irackiego."
+ iraq_md.201.a: "Zabierzmy naszych chłopców do domu"
+ iraq_md.201.b: "Nie, nie są jeszcze gotowi"
+ iraq_md.202.t: "Stany Zjednoczone wycofują swoje siły"
+ iraq_md.202.d: "Stany Zjednoczone zdecydowały się przystać na naszą prośbę i rozpoczęły wycofywanie swoich wojsk. Wycofanie się będzie stopniowe, ale już zatwierdzono przeniesienie wszystkich stanowisk rządowych obecnie obsługiwanych przez amerykańskich ekspertów."
+ iraq_md.202.a: "Wreszcie！"
+ iraq_md.203.t: "Stany Zjednoczone odmawiają wycofania się"
+ iraq_md.203.d: "Rząd amerykański odrzucił naszą prośbę, powołując się na to, że nasz rząd nie jest przygotowany do utrzymania stabilnej kontroli nad rządem."
+ iraq_md.203.a: "Niefortunny"
