--- a/localisation/polish/countries_l_polish.yml
+++ b/localisation/polish/countries_l_polish.yml
@@ -2920,8 +2920,8 @@
  PAR_nationalist_ADJ: "Paragwajski"
  PER_fascism: "Iran"
  PER_fascism_DEF: "Iran"
- PER_democratic: "Republika Iranu"
- PER_democratic_DEF: "Republikę Iranu"
+ PER_democratic: "Iran"
+ PER_democratic_DEF: "Iran"
  PER_neutrality: "Iran"
  PER_neutrality_DEF: "Iran"
  PER_communism: "Iran"
