--- a/localisation/russian/MD_countries_cosmetic_l_russian.yml
+++ b/localisation/russian/MD_countries_cosmetic_l_russian.yml
@@ -1371,23 +1371,17 @@
  UNITED_ISLAMIC_REPUBLICS: "Объединённые исламские республики"
  UNITED_ISLAMIC_REPUBLICS_ADJ: "Мусульманск."
  UNITED_ISLAMIC_REPUBLICS_DEF: "Объединённые исламские республики"
- PER_interim_government: "Революционный совет Ирана"
- PER_interim_government_DEF: "Революционный совет Ирана"
- PER_interim_government_ADJ: "Иранск."
  PER_iranic_federation: "Иранская конфедерация"
  PER_iranic_federation_DEF: "Иранская конфедерация"
  PER_iranic_federation_ADJ: "Иранск."
- PER_highway_nation: "Имперское государство Хайвэйстан"
- PER_highway_nation_DEF: "Имперское государство Хайвэйстан"
- PER_highway_nation_ADJ: "Хайвэйстанск."
  IKR_pjak_state: "Курдская партия жизни"
  IKR_pjak_state_DEF: "Курдская партия жизни"
  IKR_pjak_state_ADJ: "Курдск."
  PER_mek_flag: "НССИ"
  PER_mek_flagt_DEF: "НССИ"
  PER_mek_flag_ADJ: "Иранск."
- PER_mullahs_government: "Исламская республика Иран"
- PER_mullahs_government_DEF: "Исламская республика Иран"
+ PER_mullahs_government: "Комитет сопротивления Исламской Республики"
+ PER_mullahs_government_DEF: "Комитет сопротивления Исламской Республики"
  PER_mullahs_government_ADJ: "Иранск."
  PER_komola: "Комала"
  PER_komola_DEF: "Комала"
@@ -1398,114 +1392,18 @@
  PER_republic_tag: "Республика Иран"
  PER_republic_tag_DEF: "Республика Иран"
  PER_republic_tag_ADJ: "Иранск."
- PER_free_republic: "Свободные силы Ирана"
- PER_free_republic_DEF: "Свободные силы Ирана"
- PER_free_republic_ADJ: "Иранск."
  BLC_jandullah: "Джундалла"
  BLC_jandullah_DEF: "Джундалла"
  BLC_jandullah_ADJ: "Белуджск."
  PER_ASMLA: "АДБОА"
  PER_ASMLA_DEF: "АДБОА"
  PER_ASMLA_ADJ: "Арабистанск."
- PER_pan_iranist_front: "Объединённый иранский фронт"
- PER_pan_iranist_front_DEF: "Объединённый иранский фронт"
- PER_pan_iranist_front_ADJ: "Иранск."
- PER_imperial_restoration_movement: "Имперская коалиция"
- PER_imperial_restoration_movement_DEF: "Имперская коалиция"
- PER_imperial_restoration_movement_ADJ: "Иранск."
  south_azeri_tag: "Южный Азербайджан"
  south_azeri_tag_DEF: "Южный Азербайджан"
  south_azeri_tag_ADJ: "Южноазербайджанск."
  south_azeri_liberation_movement: "Южноазербайджанское освободительное движение"
  south_azeri_liberation_movement_DEF: "Южноазербайджанское освободительное движение"
  south_azeri_liberation_movement_ADJ: "Южноазербайджанск."
- PER_ARTESH_CONTROL: "Иранское управление Артеша"
- PER_ARTESH_CONTROL_DEF: "Иранское управление Артеша"
- PER_ARTESH_CONTROL_ADJ: "Иранск."
- SYR_ARTESH_CONTROL: "Сирийское управление Артеша"
- SYR_ARTESH_CONTROL_DEF: "Сирийское управление Артеша"
- SYR_ARTESH_CONTROL_ADJ: "Сирийск."
- IRQ_ARTESH_CONTROL: "Иракское управление Артеша"
- IRQ_ARTESH_CONTROL_DEF: "Иракское управление Артеша"
- IRQ_ARTESH_CONTROL_ADJ: "Иракск."
- TUR_ARTESH_CONTROL: "Турецкое управление Артеша"
- TUR_ARTESH_CONTROL_DEF: "Турецкое управление Артеша"
- TUR_ARTESH_CONTROL_ADJ: "Турецк."
- PAK_ARTESH_CONTROL: "Пакистанское управление Артеша"
- PAK_ARTESH_CONTROL_DEF: "Пакистанское управление Артеша"
- PAK_ARTESH_CONTROL_ADJ: "Пакистанск."
- AFG_ARTESH_CONTROL: "Афганское управление Артеша"
- AFG_ARTESH_CONTROL_DEF: "Афганское управление Артеша"
- AFG_ARTESH_CONTROL_ADJ: "Афганск."
- ARM_ARTESH_CONTROL: "Армянское управление Артеша"
- ARM_ARTESH_CONTROL_DEF: "Армянское управление Артеша"
- ARM_ARTESH_CONTROL_ADJ: "Армянск."
- AZE_ARTESH_CONTROL: "Азербайджанское управление Артеша"
- AZE_ARTESH_CONTROL_DEF: "Азербайджанское управление Артеша"
- AZE_ARTESH_CONTROL_ADJ: "Азербайджанск."
- TRK_ARTESH_CONTROL: "Туркменское управление Артеша"
- TRK_ARTESH_CONTROL_DEF: "Туркменское управление Артеша"
- TRK_ARTESH_CONTROL_ADJ: "Туркменск."
- KUR_ARTESH_CONTROL: "Курдское управление Артеша"
- KUR_ARTESH_CONTROL_DEF: "Курдское управление Артеша"
- KUR_ARTESH_CONTROL_ADJ: "курдский"
- PER_IRQ_GOVERNATE: "Иранское управление Ирака"
- PER_IRQ_GOVERNATE_ADJ: "Иранское управление Ирака"
- PER_IRQ_GOVERNATE_DEF: "Иракск."
- PER_SYR_GOVERNATE: "Иранское управление Сирии"
- PER_SYR_GOVERNATE_ADJ: "Иранское управление Сирии"
- PER_SYR_GOVERNATE_DEF: "Сирийск."
- PER_KUR_GOVERNATE: "Иранское управление Курдистана"
- PER_KUR_GOVERNATE_ADJ: "Иранское управление Курдистана"
- PER_KUR_GOVERNATE_DEF: "Курдск."
- PER_TUR_GOVERNATE: "Иранское управление Турции"
- PER_TUR_GOVERNATE_ADJ: "Иранское управление Турции"
- PER_TUR_GOVERNATE_DEF: "Турецк."
- PER_TRK_GOVERNATE: "Иранское управление Туркменистана"
- PER_TRK_GOVERNATE_ADJ: "Иранское управление Туркменистана"
- PER_TRK_GOVERNATE_DEF: "Туркменск."
- PER_UZB_GOVERNATE: "Иранское управление Узбекистана"
- PER_UZB_GOVERNATE_ADJ: "Иранское управление Узбекистана"
- PER_UZB_GOVERNATE_DEF: "Узбекск."
- PER_AZE_GOVERNATE: "Иранское управление Азербайджана"
- PER_AZE_GOVERNATE_ADJ: "Иранское управление Азербайджана"
- PER_AZE_GOVERNATE_DEF: "Азербайджанск."
- PER_ARM_GOVERNATE: "Иранское управление Армении"
- PER_ARM_GOVERNATE_ADJ: "Иранское управление Армении"
- PER_ARM_GOVERNATE_DEF: "Армянск."
- PER_GEO_GOVERNATE: "Иранское управление Грузии"
- PER_GEO_GOVERNATE_ADJ: "Иранское управление Грузии"
- PER_GEO_GOVERNATE_DEF: "Грузинск."
- PER_PAK_GOVERNATE: "Иранское управление Пакистана"
- PER_PAK_GOVERNATE_ADJ: "Иранское управление Пакистана"
- PER_PAK_GOVERNATE_DEF: "Пакистанск."
- PER_AFG_GOVERNATE: "Иранское управление Афганистана"
- PER_AFG_GOVERNATE_ADJ: "Иранское управление Афганистана"
- PER_AFG_GOVERNATE_DEF: "Афганск."
- PER_TAJ_GOVERNATE: "Иранское управление Таджикистана"
- PER_TAJ_GOVERNATE_ADJ: "Иранское управление Таджикистана"
- PER_TAJ_GOVERNATE_DEF: "Таджикск."
- PER_JOR_GOVERNATE: "Иранское управление Иордании"
- PER_JOR_GOVERNATE_ADJ: "Иранское управление Иордании"
- PER_JOR_GOVERNATE_DEF: "Арабск."
- PER_LEB_GOVERNATE: "Иранское управление Ливана"
- PER_LEB_GOVERNATE_ADJ: "Иранское управление Ливана"
- PER_LEB_GOVERNATE_DEF: "Арабск."
- PER_BHR_GOVERNATE: "Иранское управление Бахрейна"
- PER_BHR_GOVERNATE_ADJ: "Иранское управление Бахрейна"
- PER_BHR_GOVERNATE_DEF: "Арабск."
- PER_UAE_GOVERNATE: "Иранское управление Объединённых Арабских Эмиратов"
- PER_UAE_GOVERNATE_ADJ: "Иранское управление Объединённых Арабских Эмиратов"
- PER_UAE_GOVERNATE_DEF: "Арабск."
- PER_PAL_GOVERNATE: "Иранское управление Палестины"
- PER_PAL_GOVERNATE_ADJ: "Иранское управление Палестины"
- PER_PAL_GOVERNATE_DEF: "Арабск."
- PER_ISR_GOVERNATE: "Иранское управление Израиля"
- PER_ISR_GOVERNATE_ADJ: "Иранское управление Израиля"
- PER_ISR_GOVERNATE_DEF: "Израильск."
- PER_EGY_GOVERNATE: "Иранское управление Египта"
- PER_EGY_GOVERNATE_ADJ: "Иранское управление Египта"
- PER_EGY_GOVERNATE_DEF: "Египетск."
  BAN_REB_democratic: "Бангладешские вооруженные силы"
  BAN_REB_democratic_ADJ: "Бангладешск."
  BAN_REB_democratic_DEF: "Вооруженные силы Бангладеша"
@@ -3701,3 +3599,6 @@
  Nazbols_SLO: "Словацкая Социал-Националистическая Республика"
  Nazbols_BOS: "Социал-националистическая Республика Босния"
  Nazbols_CRO: "Социалистическая Республика Хорватия"
+ PER_REB: "Революционный совет Ирана"
+ PER_REB_DEF: "Революционный совет Ирана"
+ PER_REB_ADJ: "Иранский"
