--- a/localisation/russian/MD_focus_ARM_l_russian.yml
+++ b/localisation/russian/MD_focus_ARM_l_russian.yml
@@ -537,7 +537,7 @@
  ARM_new_uniforms_desc: "Мы должны обновить форму армянских вооруженных сил со старого советского камуфляжа на более практичный эквивалент Woodland."
  ARM_old_doctrine: "Адаптировать старую доктрину"
  ARM_old_doctrine_desc: "Адаптация старой оборонительной доктрины будет полезна для нас из-за структуры нашей армии и нашего военного наследия"
- ARM_kornet: "9M133 Kornet"
+ ARM_kornet: "9M133 Корнет"
  ARM_kornet_desc: "Kornet 9М133 (NATO reporting name AT-14 Spriggan, export designation Kornet-E) - российская переносная противотанковая управляемая ракета (ПТУР) второго поколения, предназначенная для борьбы с основными боевыми танками. Впервые поступила на вооружение российской армии в 1998 году"
  ARM_clear_generals: "Чистки генералов"
  ARM_clear_generals_desc: "Мы должны очистить генералитет от некоторых лиц, нелояльных правительству. Даже если для этого придется отправить их в отставку или еще хуже..."
