--- a/localisation/russian/MD_focus_GER_l_russian.yml
+++ b/localisation/russian/MD_focus_GER_l_russian.yml
@@ -1155,7 +1155,7 @@
  GER_the_clock_ticks: "Операция"
  GER_the_clock_ticks_desc: "Сегодня мы начинаем нашу операцию. Вместе с нашими союзниками мы освободим регион от лжегосударства!"
  GER_bundeswehr_reforms_decisions: "Реформа Бундесвера"
- GER_bundeswehr_reforms_decisions_desc: "The §HBundeswehr§!, our nations armed forces is in a dire §Rneed of repair§!. In it's current state, it is quite §Rweak and ineffective§!. But by initiating a series of reforms and changes, we can fix that.\n\n§HBundeswehr Recovery§! will represent the progress we have made in §Hreforming§! the force. Once it reaches §H100%§!, any problems that remain will be §Gresolved§!, and the force can become combat ready."
+ GER_bundeswehr_reforms_decisions_desc: "§HБундесвер§!, вооруженные силы нашей страны, §Rнуждаются в остром ремонте§!. В своем нынешнем состоянии он весьма §RСлаб и неэффективен§!. Но, начав серию реформ и изменений, мы можем это исправить.\n\n§HВосстановление Бундесвера§! будет представлять прогресс, которого мы достигли в §Hреформировании§! сила. Как только оно достигнет §H100%§!, все оставшиеся проблемы будут §Gрешены§!, и силы смогут стать боеготовыми."
  GER_allocate_larger_budget: "Выделите больший бюджет"
  GER_allocate_larger_budget_desc: "Мы можем увеличить финансирование наших войск, ускорив процесс наших реформ за счет улучшения основных товаров для наших вооруженных сил."
  GER_upgrade_military_infrastructure: "Улучшить военную инфраструктуру"
@@ -2036,8 +2036,8 @@
  GER_upgraded_mining_equipment: "Модернизированное горнодобывающее оборудование"
  GER_generic_spending_laws: "Государственный общественный бюджет"
  GER_generic_spending_laws_desc: "Государственный бюджет - это налоговые фонды, из которых финансируется сектор государственных услуг, включающий в себя; §Yздравоохранение§!, §Yобразование§! и §Yвнутреннюю безопасность§!."
- GER_Bundeswehr_modifier: "Бундесвер"
- GER_Bundeswehr_modifier_desc: "Этот модификатор покажет вам все бонусы, которые вы получите для своей армии благодаря фокусу"
+ GER_Bundeswehr_modifier: "Состояние Бундесвера"
+ GER_Bundeswehr_modifier_desc: "Этот модификатор покажет вам все преимущества, которые вы получаете для Бундесвера (армии) от взятых вами фокусов."
  GER_great_negative_opinion: "§RБольшое отрицательное мнение§!"
  GER_slight_negative_opinion: "§tНебольшое отрицательное мнение§!"
  GER_very_slight_negative_opinion: "§tVexry Slight Negative Opinion§!"
@@ -2056,7 +2056,7 @@
  GER_Kommando_Hubschrauber_TT: "§gБудет создано§! §YKommando Hubschrauber§! §gдивизия в§! §YБилефельде§!"
  GER_increases_productivity_by_10: "§GУвеличится§! производительность на §G10§!"
  GER_east_german_productivity_drop: "Производительность в §HВосточной Германии§! §Rуменьшится§! на §R10!§!"
- GER_uh_oh_TT: "§RCorruption§! will §Rspike§! dramatically, our Economy will be in §Rruins§!, and the Bavarians thirst for §Rindependence§! will be §Rgreater§! than ever before!"
+ GER_uh_oh_TT: "§RКоррупция§! §Rспайк§! драматически, наша Экономика окажется в §RРруинах§!, а баварцы жаждут §RРнезависимости§! будет §Rбольше§! чем когда-либо прежде!"
  GER_BLR_REV_TT: "[BLR.GetFlag] В §HБеларуси§! произойдёт §Rреволюция§! и будет свергнут §Rдиктатор!§!"
  GER_BLR_CIVIL_WAR_TT: "[BLR.GetFlag] В §HБеларуси§! разразится §Rгражданская война§! и она станет нашим §Gпротекторатом!§!"
  GER_VDE_TT: "£decision_icon_small Will activate §HVerkehrsprojekt Deutsche Einheit§! Decisions!"
@@ -2614,3 +2614,7 @@
  bavaria.1.b: "Ни в коем случае!"
  GER_agenda_2010: "Агенда 2010"
  GER_agenda_2010_desc: "Герхард Шредер всегда был умеренным среди социал-демократов и поэтому выступал за ограничение бюджета. «Повестка дня на 2010 год» — это амбициозный проект сокращения бюджета и бюрократических реформ, который, без сомнения, вызовет резкую критику со стороны левых групп и подтолкнет правительство к центру, но он может оказаться фантастическим для экономического прогресса."
+ GER_strengthen_the_service_sector: "Strengthen the Service Sector"
+ GER_strengthen_the_service_sector_desc: "We must strengthen the service sector in order to fully modernize our economy."
+ GER_european_business_opportunities: "European Business Opportunities"
+ GER_european_business_opportunities_desc: "By opening our economy to the rest of Europe, we will be able to fully utilize investments and opportunities provided by the new investment pool."
