--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -2883,8 +2883,8 @@
  PAR_nationalist_ADJ: "Парагвайск."
  PER_fascism: "Иран"
  PER_fascism_DEF: "Иран"
- PER_democratic: "Республика Иран"
- PER_democratic_DEF: "Республика Иран"
+ PER_democratic: "Иран"
+ PER_democratic_DEF: "Иран"
  PER_neutrality: "Иран"
  PER_neutrality_DEF: "Иран"
  PER_communism: "Иран"
