--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -2227,14 +2227,7 @@
  ISR_Rec_tank_5_short: "M7A2"
  IRE_APC_1: "Timoney Armoured Personnel Carrier"
  IRE_APC_1_short: "Timoney APC"
- IRQ_infantry_weapons: "Tabuk AKM"
  IRQ_infantry_weapons1: "Tabuk DMR"
- IRQ_infantry_weapons2: "AK-74N"
- IRQ_infantry_weapons3: "AK-74M"
- IRQ_infantry_weapons4: "AK-103"
- IRQ_infantry_weapons5: "AK-12"
- IRQ_infantry_weapons6: "AK-23"
- IRQ_infantry_weapons7: "AK-31"
  IRQ_SP_arty_1: "Al-Fao"
  IRQ_SP_R_arty_0: "Ababeel"
  IRQ_SP_R_arty_1: "Sajeel-60"
@@ -3469,8 +3462,8 @@
  SOV_Anti_tank_0_desc: "Использовался во многих войнах и на многих транспортных средствах."
  SOV_Anti_tank_1: "АТ-4 «Фагот»"
  SOV_Anti_tank_1_desc: "Гораздо легче, чем другие АТ-системы, и старше. АТ может поражать на расстоянии 70-2500 метров, что по сравнению с другими значительно меньше, но дешевле."
- SOV_Anti_tank_2: "Корнет 9М133"
- SOV_Anti_tank_2_desc: "Корнет 9М133"
+ SOV_Anti_tank_2: "Корнет-M 9М133M"
+ SOV_Anti_tank_2_desc: "Корнет-M 9М133M"
  SOV_Anti_tank_3: "АТ-22"
  SOV_Anti_tank_4: "АТ-45"
  SOV_MBT_1: "T-55"
@@ -7206,8 +7199,8 @@
  SOV_MR_Fighter2_short: "МиГ-29 «Точка опоры»"
  SOV_MR_Fighter3: "МиГ-29М"
  SOV_MR_Fighter3_short: "МиГ-29М"
- SOV_MR_Fighter4: "МиГ-35"
- SOV_MR_Fighter4_short: "МиГ-35"
+ SOV_MR_Fighter4: "Су-75 Шах и мат"
+ SOV_MR_Fighter4_short: "Су-75 Шах и мат"
  SOV_MR_Fighter5: "Су-35СМ"
  SOV_MR_Fighter5_short: "Су-35СМ"
  SOV_Strike_fighter1: "Су-17 «Монтажник»"
@@ -8321,8 +8314,8 @@
  BSH_Anti_tank_0_desc: "Использовался во многих войнах и на многих транспортных средствах."
  BSH_Anti_tank_1: "АТ-4 «Фагот»"
  BSH_Anti_tank_1_desc: "Гораздо легче, чем другие АТ-системы, и старше. АТ может поражать на расстоянии 70-2500 метров, что по сравнению с другими значительно меньше, но дешевле."
- BSH_Anti_tank_2: "Корнет 9М133"
- BSH_Anti_tank_2_desc: "Корнет 9М133"
+ BSH_Anti_tank_2: "Корнет-M 9М133M"
+ BSH_Anti_tank_2_desc: "Корнет-M 9М133M"
  BSH_Anti_tank_3: "АТ-22"
  BSH_Anti_tank_4: "АТ-45"
  BSH_MBT_1: "T-55"
@@ -8422,8 +8415,8 @@
  CRM_Anti_tank_0_desc: "Использовался во многих войнах и на многих транспортных средствах."
  CRM_Anti_tank_1: "АТ-4 «Фагот»"
  CRM_Anti_tank_1_desc: "Гораздо легче, чем другие АТ-системы, и старше. АТ может поражать на расстоянии 70-2500 метров, что по сравнению с другими значительно меньше, но дешевле."
- CRM_Anti_tank_2: "Корнет 9М133"
- CRM_Anti_tank_2_desc: "Корнет 9М133"
+ CRM_Anti_tank_2: "Корнет-M 9М133M"
+ CRM_Anti_tank_2_desc: "Корнет-M 9М133M"
  CRM_Anti_tank_3: "AT-22"
  CRM_Anti_tank_4: "AT-45"
  CRM_MBT_1: "T-55"
@@ -8602,8 +8595,8 @@
  TAT_Anti_tank_0_desc: "Использовался во многих войнах и на многих транспортных средствах."
  TAT_Anti_tank_1: "АТ-4 «Фагот»"
  TAT_Anti_tank_1_desc: "Гораздо легче, чем другие АТ-системы, и старше. АТ может поражать на расстоянии 70-2500 метров, что по сравнению с другими значительно меньше, но дешевле."
- TAT_Anti_tank_2: "Корнет 9М133"
- TAT_Anti_tank_2_desc: "Корнет 9М133"
+ TAT_Anti_tank_2: "Корнет-M 9М133M"
+ TAT_Anti_tank_2_desc: "Корнет-M 9М133M"
  TAT_Anti_tank_3: "AT-22"
  TAT_Anti_tank_4: "AT-45"
  TAT_MBT_1: "T-55"
@@ -8859,8 +8852,8 @@
  WAG_Anti_tank_0_desc: "Использовался во многих войнах и на многих транспортных средствах."
  WAG_Anti_tank_1: "АТ-4 «Фагот»"
  WAG_Anti_tank_1_desc: "Гораздо легче, чем другие АТ-системы, и старше. АТ может поражать на расстоянии 70-2500 метров, что по сравнению с другими значительно меньше, но дешевле."
- WAG_Anti_tank_2: "Корнет 9М133"
- WAG_Anti_tank_2_desc: "Корнет 9М133"
+ WAG_Anti_tank_2: "Корнет-M 9М133M"
+ WAG_Anti_tank_2_desc: "Корнет-M 9М133M"
  WAG_Anti_tank_3: "АТ-22"
  WAG_Anti_tank_4: "АТ-45"
  WAG_MBT_1: "T-55"
@@ -9010,8 +9003,8 @@
  PMR_Anti_tank_0_desc: "Использовался во многих войнах и на многих транспортных средствах."
  PMR_Anti_tank_1: "АТ-4 «Фагот»"
  PMR_Anti_tank_1_desc: "Гораздо легче, чем другие АТ-системы, и старше. АТ может поражать на расстоянии 70-2500 метров, что по сравнению с другими значительно меньше, но дешевле."
- PMR_Anti_tank_2: "Корнет 9М133"
- PMR_Anti_tank_2_desc: "Корнет 9М133"
+ PMR_Anti_tank_2: "Корнет-M 9М133M"
+ PMR_Anti_tank_2_desc: "Корнет-M 9М133M"
  PMR_MBT_1: "T-55"
  PMR_MBT_1_desc: "Танк Т-55, пожалуй, самый производимый в мире. Разработанный и произведенный в первые годы холодной войны, он был могуществом и основой Красной Армии. Когда-то опасавшийся как символ российской мощи, он стал культовым изображением ближневосточных бронетанковых войск, уничтожаемых в результате американского воздушного удара."
  PMR_MBT_1_short: "T-55"
@@ -9109,3 +9102,10 @@
  UKR_infantry_weapons1: "AK-74"
  UKR_infantry_weapons2: "AK-74N"
  UKR_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons: "Tabuk AKM"
+ IRQ_infantry_weapons2: "AK-74N"
+ IRQ_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons4: "AK-103"
+ IRQ_infantry_weapons5: "AK-12"
+ IRQ_infantry_weapons6: "AK-23"
+ IRQ_infantry_weapons7: "AK-31"
