--- a/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
@@ -1277,9 +1277,6 @@
  UNITED_ISLAMIC_REPUBLICS: "伊斯兰联合共和国"
  UNITED_ISLAMIC_REPUBLICS_ADJ: "穆斯林"
  UNITED_ISLAMIC_REPUBLICS_DEF: "伊斯兰联合共和国"
- PER_interim_government: "伊朗革命委员会"
- PER_interim_government_DEF: "伊朗革命委员会"
- PER_interim_government_ADJ: "伊朗"
  PER_iranic_federation: "伊朗联盟"
  PER_iranic_federation_DEF: "伊朗联盟"
  PER_iranic_federation_ADJ: "伊朗"
@@ -3020,12 +3017,9 @@
  MAC_autonomy_special_administrative_region: "澳门特别行政区"
  MAC_autonomy_special_administrative_region_DEF: "澳门特别行政区"
  MAC_autonomy_special_administrative_region_ADJ: "澳门"
- PER_mullahs_government: "伊朗伊斯兰共和国"
- PER_mullahs_government_DEF: "伊朗伊斯兰共和国"
+ PER_mullahs_government: "伊斯兰共和国抵抗委员会"
+ PER_mullahs_government_DEF: "伊斯兰共和国抵抗委员会"
  PER_mullahs_government_ADJ: "伊朗"
- PER_highway_nation: "海威斯坦帝国"
- PER_highway_nation_DEF: "海威斯坦帝国"
- PER_highway_nation_ADJ: "海威斯坦"
  IKR_pjak_state: "库尔德斯坦生活党"
  IKR_pjak_state_DEF: "库尔德斯坦生活党"
  IKR_pjak_state_ADJ: "库尔德"
@@ -3097,36 +3091,6 @@
  NHN_federation_nationalist: "北掸邦国"
  NHN_federation_nationalist_DEF: "北掸邦国"
  NHN_federation_nationalist_ADJ: "北掸邦"
- PER_ARTESH_CONTROL: "伊朗军事当局"
- PER_ARTESH_CONTROL_DEF: "伊朗军事当局"
- PER_ARTESH_CONTROL_ADJ: "伊朗"
- SYR_ARTESH_CONTROL: "叙利亚军事当局"
- SYR_ARTESH_CONTROL_DEF: "叙利亚军事当局"
- SYR_ARTESH_CONTROL_ADJ: "叙利亚"
- IRQ_ARTESH_CONTROL: "伊拉克军事当局"
- IRQ_ARTESH_CONTROL_DEF: "伊拉克军事当局"
- IRQ_ARTESH_CONTROL_ADJ: "伊拉克"
- TUR_ARTESH_CONTROL: "土耳其军事当局"
- TUR_ARTESH_CONTROL_DEF: "土耳其军事当局"
- TUR_ARTESH_CONTROL_ADJ: "土耳其"
- PAK_ARTESH_CONTROL: "巴基斯坦军事当局"
- PAK_ARTESH_CONTROL_DEF: "巴基斯坦军事当局"
- PAK_ARTESH_CONTROL_ADJ: "巴基斯坦"
- AFG_ARTESH_CONTROL: "阿富汗军事当局"
- AFG_ARTESH_CONTROL_DEF: "阿富汗军事当局"
- AFG_ARTESH_CONTROL_ADJ: "阿富汗"
- ARM_ARTESH_CONTROL: "亚美尼亚军事当局"
- ARM_ARTESH_CONTROL_DEF: "亚美尼亚军事当局"
- ARM_ARTESH_CONTROL_ADJ: "亚美尼亚"
- AZE_ARTESH_CONTROL: "阿塞拜疆军事当局"
- AZE_ARTESH_CONTROL_DEF: "阿塞拜疆军事当局"
- AZE_ARTESH_CONTROL_ADJ: "阿塞拜疆"
- TRK_ARTESH_CONTROL: "土库曼军事当局"
- TRK_ARTESH_CONTROL_DEF: "土库曼军事当局"
- TRK_ARTESH_CONTROL_ADJ: "土库曼"
- KUR_ARTESH_CONTROL: "库尔德军事当局"
- KUR_ARTESH_CONTROL_DEF: "库尔德军事当局"
- KUR_ARTESH_CONTROL_ADJ: "库尔德"
  POL_QUAD: "联合维谢格拉德国"
  WAG_fascism: "瓦格纳集团"
  WAG_fascism_DEF: "私营军事公司‘瓦格纳’"
@@ -3203,84 +3167,18 @@
  PER_republic_tag: "伊朗共和国"
  PER_republic_tag_DEF: "伊朗共和国"
  PER_republic_tag_ADJ: "伊朗"
- PER_free_republic: "伊朗自由军"
- PER_free_republic_DEF: "伊朗自由军"
- PER_free_republic_ADJ: "伊朗"
  BLC_jandullah: "真主党"
  BLC_jandullah_DEF: "真主党"
  BLC_jandullah_ADJ: "俾路支"
  PER_ASMLA: "解放阿瓦士的阿拉伯奋斗运动"
  PER_ASMLA_DEF: "解放阿瓦士的阿拉伯奋斗运动"
  PER_ASMLA_ADJ: "阿拉伯斯坦"
- PER_pan_iranist_front: "伊朗联合阵线"
- PER_pan_iranist_front_DEF: "伊朗联合阵线"
- PER_pan_iranist_front_ADJ: "伊朗"
- PER_imperial_restoration_movement: "帝国同盟"
- PER_imperial_restoration_movement_DEF: "帝国同盟"
- PER_imperial_restoration_movement_ADJ: "伊朗"
  south_azeri_tag: "南阿塞拜疆"
  south_azeri_tag_DEF: "南阿塞拜疆"
  south_azeri_tag_ADJ: "南阿塞拜疆"
  south_azeri_liberation_movement: "南阿塞拜疆解放运动"
  south_azeri_liberation_movement_DEF: "南阿塞拜疆解放运动"
  south_azeri_liberation_movement_ADJ: "南阿塞拜疆"
- PER_IRQ_GOVERNATE: "伊朗伊拉克省"
- PER_IRQ_GOVERNATE_ADJ: "伊朗伊拉克省"
- PER_IRQ_GOVERNATE_DEF: "伊拉克"
- PER_SYR_GOVERNATE: "伊朗叙利亚省"
- PER_SYR_GOVERNATE_ADJ: "伊朗叙利亚省"
- PER_SYR_GOVERNATE_DEF: "叙利亚"
- PER_KUR_GOVERNATE: "伊朗库尔德斯坦省"
- PER_KUR_GOVERNATE_ADJ: "伊朗库尔德斯坦省"
- PER_KUR_GOVERNATE_DEF: "库尔德"
- PER_TUR_GOVERNATE: "伊朗土耳其省"
- PER_TUR_GOVERNATE_ADJ: "伊朗土耳其省"
- PER_TUR_GOVERNATE_DEF: "土耳其"
- PER_TRK_GOVERNATE: "伊朗土库曼斯坦省"
- PER_TRK_GOVERNATE_ADJ: "伊朗土库曼斯坦省"
- PER_TRK_GOVERNATE_DEF: "土库曼"
- PER_UZB_GOVERNATE: "伊朗乌兹别克斯坦省"
- PER_UZB_GOVERNATE_ADJ: "伊朗乌兹别克斯坦省"
- PER_UZB_GOVERNATE_DEF: "乌兹别克"
- PER_AZE_GOVERNATE: "伊朗阿塞拜疆省"
- PER_AZE_GOVERNATE_ADJ: "伊朗阿塞拜疆省"
- PER_AZE_GOVERNATE_DEF: "阿塞拜疆"
- PER_ARM_GOVERNATE: "伊朗亚美尼亚省"
- PER_ARM_GOVERNATE_ADJ: "伊朗亚美尼亚省"
- PER_ARM_GOVERNATE_DEF: "亚美尼亚"
- PER_GEO_GOVERNATE: "伊朗格鲁吉亚省"
- PER_GEO_GOVERNATE_ADJ: "伊朗格鲁吉亚省"
- PER_GEO_GOVERNATE_DEF: "格鲁吉亚"
- PER_PAK_GOVERNATE: "伊朗巴基斯坦省"
- PER_PAK_GOVERNATE_ADJ: "伊朗巴基斯坦省"
- PER_PAK_GOVERNATE_DEF: "巴基斯坦"
- PER_AFG_GOVERNATE: "伊朗阿富汗省"
- PER_AFG_GOVERNATE_ADJ: "伊朗阿富汗省"
- PER_AFG_GOVERNATE_DEF: "阿富汗"
- PER_TAJ_GOVERNATE: "伊朗塔吉克斯坦省"
- PER_TAJ_GOVERNATE_ADJ: "伊朗塔吉克斯坦省"
- PER_TAJ_GOVERNATE_DEF: "塔吉克"
- PER_JOR_GOVERNATE: "伊朗约旦省"
- PER_JOR_GOVERNATE_ADJ: "伊朗约旦省"
- PER_JOR_GOVERNATE_DEF: "阿拉伯"
- PER_LEB_GOVERNATE: "伊朗黎巴嫩省"
- PER_LEB_GOVERNATE_ADJ: "伊朗黎巴嫩省"
- PER_LEB_GOVERNATE_DEF: "阿拉伯"
- PER_BHR_GOVERNATE: "伊朗巴林省"
- PER_BHR_GOVERNATE_ADJ: "伊朗巴林省"
- PER_BHR_GOVERNATE_DEF: "阿拉伯"
- PER_UAE_GOVERNATE: "伊朗阿联酋省"
- PER_UAE_GOVERNATE_ADJ: "伊朗阿联酋省"
- PER_UAE_GOVERNATE_DEF: "阿拉伯"
- PER_PAL_GOVERNATE: "伊朗巴勒斯坦省"
- PER_PAL_GOVERNATE_ADJ: "伊朗巴勒斯坦省"
- PER_PAL_GOVERNATE_DEF: "阿拉伯"
- PER_ISR_GOVERNATE: "伊朗以色列省"
- PER_ISR_GOVERNATE_ADJ: "伊朗以色列省"
- PER_ISR_GOVERNATE_DEF: "以色列"
- PER_EGY_GOVERNATE: "伊朗埃及省"
- PER_EGY_GOVERNATE_ADJ: "伊朗埃及省"
- PER_EGY_GOVERNATE_DEF: "埃及"
  SHA_federation_democratic: "西马格里布联邦"
  SHA_federation_democratic_ADJ: "马格里布"
  SHA_federation_democratic_DEF: "西马格里布联邦"
@@ -3701,3 +3599,6 @@
  Nazbols_SLO: "斯洛伐克社会民族主义共和国"
  Nazbols_BOS: "波斯尼亚社会民族主义共和国"
  Nazbols_CRO: "克罗地亚社会主义共和国"
+ PER_REB: "伊朗革命委员会"
+ PER_REB_DEF: "伊朗革命委员会"
+ PER_REB_ADJ: "伊朗"
