--- a/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
@@ -2538,7 +2538,7 @@
  GER_idea_Heeresaufklarungstruppe_desc: "陆军侦察部队的成立是为了统一陆军所有侦察部队。"
  Ger_idea_European_Army: "德国主力军"
  Ger_idea_European_Army_desc: "德国通过组建较小盟国的一体化结构，成为欧洲陆军的支柱。"
- GER_Bundeswehr_modifier_desc: "这个修正向您展示了您的军队从国策中获得的所有好处。"
+ GER_Bundeswehr_modifier_desc: "该修正将显示你从采取的国策中为德国联邦国防军（陆军）获得的所有收益"
  Luchtmobiele_Brigade_TT: "§g将§g在§!§Y荷兰§!创建§!§Y航空旅§!"
  GER_Kommando_Hubschrauber_TT: "§g将§g在§!§Y比勒费尔德§!创建§!§Y直升机指挥部§!"
  GER_oberst_TT: "我们将派遣我们的§Y将领§!去北约国防学院"
@@ -2614,3 +2614,7 @@
  bavaria.1.b: "绝对不行！"
  GER_agenda_2010: "2010年议程"
  GER_agenda_2010_desc: "格哈德·施罗德一直是社会民主党的温和派，因此主张对预算进行克制。“2010 议程”是一项雄心勃勃的预算削减和官僚改革计划，毫无疑问，它将受到左翼团体的严厉批评，并将政府推向中间派 - 但这对于经济发展来说可能是件好事。"
+ GER_strengthen_the_service_sector: "加强服务业"
+ GER_strengthen_the_service_sector_desc: "我们必须加强服务业，才能全面实现经济现代化。"
+ GER_european_business_opportunities: "欧洲商业机会"
+ GER_european_business_opportunities_desc: "通过向欧洲其他国家开放我们的经济，我们将能够充分利用新投资池提供的投资和机会。"
