--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -344,7 +344,7 @@
  generic.oligarchism_desc: "寡头政治是指控制权掌握在选定的政治和经济精英群体手中的权力结构。寡头政治本质上是典型的非民主和独裁。"
  generic.Neutral_Libertarian: "£generic_Neutral_Libertarian_small 自由主义"
  generic.Neutral_Libertarian_icon: "£generic_Neutral_Libertarian_small"
- generic.Neutral_Libertarian_desc: "自由主义是指以自由为核心原则的广泛政治意识形态和运动。自由主义者通常比保守主义者更支持政府对社会、政治和经济生活各个方面进行有限干预。"
+ generic.Neutral_Libertarian_desc: "自由主义是指以自由为核心原则的一系列政治意识形态和运动。自由主义者通常比保守主义者更支持政府对社会、政治和经济生活各个方面的有限干预。"
  generic.Neutral_green: "£generic_Neutral_green_small 绿党"
  generic.Neutral_green_icon: "£generic_Neutral_green_small"
  generic.Neutral_green_desc: "绿色政治或生态政治是指倡导非暴力、社会正义、直接民主和环保主义的广泛左翼运动。"
