--- a/localisation/braz_por/equipment_l_braz_por.yml
+++ b/localisation/braz_por/equipment_l_braz_por.yml
@@ -2227,14 +2227,7 @@
  ISR_Rec_tank_5_short: "M7A2"
  IRE_APC_1: "Transportador de Pessoal Blindado Timoney"
  IRE_APC_1_short: "Timoney APC"
- IRQ_infantry_weapons: "Tabuk AKM"
  IRQ_infantry_weapons1: "Tabuk DMR"
- IRQ_infantry_weapons2: "AK-74N"
- IRQ_infantry_weapons3: "AK-74M"
- IRQ_infantry_weapons4: "AK-103"
- IRQ_infantry_weapons5: "AK-12"
- IRQ_infantry_weapons6: "AK-23"
- IRQ_infantry_weapons7: "AK-31"
  IRQ_SP_arty_1: "Al-Fao"
  IRQ_SP_R_arty_0: "Ababeel"
  IRQ_SP_R_arty_1: "Sajeel-60"
@@ -8246,9 +8239,9 @@
  BSH_infantry_weapons_desc: "O AKM, desenvolvido em 1959, é a variante modernizada mais comum do fuzil AK-47, desenvolvido por Mikhail Kalashnikov. É muito mais leve e mais preciso durante o disparo automático do que seu antecessor."
  BSH_infantry_weapons1: "AK-74"
  BSH_infantry_weapons1_desc: "O AK-74 é desenvolvido a partir do AKM e apresenta melhorias significativas em relação ao seu antecessor. Notavelmente, ele usa cartuchos de 5,45 mm em vez dos então padrão Pacto de Varsóvia de 7,62 mm."
- BSH_infantry_weapons2: "AK-74M"
+ BSH_infantry_weapons2: "AK-74N"
  BSH_infantry_weapons2_desc: "Embora o AK-74N seja internamente semelhante ao AK-74, ele é equipado com uma montagem em cauda de andorinha para óptica."
- BSH_infantry_weapons3: "AK-103"
+ BSH_infantry_weapons3: "AK-74M"
  BSH_infantry_weapons3_desc: "O fuzil de assalto AK-103 é derivado do AK-74M e calibrado para o cartucho 7,62x39 mm M43. Assim como o antigo AKM, o 103 pode usar vários tipos de miras, incluindo visão noturna e telescópica, além de permitir o encaixe de baioneta ou lançador de granadas. A diferença em relação à maioria dos AKs são os materiais plásticos e mais baratos do 103."
  BSH_infantry_weapons4: "AK-103"
  BSH_infantry_weapons4_desc: "O rifle de assalto AK-103 é um derivado do AK-74M com câmara para o cartucho M43 de 7,62x39mm. Muito parecido com o AKM mais antigo, o 103 pode usar uma variedade de miras, incluindo visão noturna e telescópica. Além de caber em uma baioneta ou lançador de granadas. A diferença da maioria dos AKs é o plástico e os materiais mais baratos do 103."
@@ -8320,7 +8313,7 @@
  BSH_Anti_tank_0_desc: "Usado em muitas guerras e em muitos veículos."
  BSH_Anti_tank_1: "AT-4 Fagot"
  BSH_Anti_tank_1_desc: "Muito mais leve do que outros sistemas AT, e mais antigo. O AT só pode atingir a 70-2.500m, o que, comparado aos outros, é um alcance muito menor, mas também mais barato."
- BSH_Anti_tank_2: "9M133 Kornet"
+ BSH_Anti_tank_2: "9M133M Kornet-M"
  BSH_Anti_tank_2_desc: "9M133M Kornet-M"
  BSH_Anti_tank_3: "AT-22"
  BSH_Anti_tank_4: "AT-45"
@@ -8347,9 +8340,9 @@
  CRM_infantry_weapons_desc: "O AKM, desenvolvido em 1959, é a variante modernizada mais comum do rifle AK-47, desenvolvido por Mikhail Kalashnikov. É muito mais leve e mais preciso durante o disparo automático do que seu antecessor."
  CRM_infantry_weapons1: "AK-74"
  CRM_infantry_weapons1_desc: "O AK-74 é desenvolvido a partir do AKM e apresenta melhorias significativas em relação ao seu antecessor. Notavelmente, utiliza cartuchos de 5,45 mm em vez dos então padrão 7,62 mm do Pacto de Varsóvia."
- CRM_infantry_weapons2: "AK-74M"
+ CRM_infantry_weapons2: "AK-74N"
  CRM_infantry_weapons2_desc: "Em 1991, a fábrica Izhmash na cidade de Izhevsk iniciou a produção em grande escala de uma variante modernizada do AK-74, o AK-74M. Equipado com um conjunto de parafuso e transportador aliviado, bem como uma coronha de poliamida preenchida com vidro."
- CRM_infantry_weapons3: "AK-103"
+ CRM_infantry_weapons3: "AK-74M"
  CRM_infantry_weapons3_desc: "O fuzil de assalto AK-103 é derivado do AK-74M, calibrado para o cartucho 7,62x39mm M43. Assim como o mais antigo AKM, o 103 pode usar uma variedade de miras, incluindo visão noturna e telescópica. Além disso, pode ser equipado com baioneta ou lançador de granadas. A diferença em relação à maioria dos AKs está nos materiais plásticos e mais baratos do 103."
  CRM_infantry_weapons4: "AK-103"
  CRM_infantry_weapons4_desc: "O rifle de assalto AK-103 é um derivado do AK-74M com câmara para o cartucho M43 de 7,62x39mm. Muito parecido com o AKM mais antigo, o 103 pode usar uma variedade de miras, incluindo visão noturna e telescópica. Além de caber em uma baioneta ou lançador de granadas. A diferença da maioria dos AKs é o plástico e os materiais mais baratos do 103."
@@ -8421,8 +8414,8 @@
  CRM_Anti_tank_0_desc: "Usado em muitas guerras e em muitos veículos."
  CRM_Anti_tank_1: "AT-4 Fagot"
  CRM_Anti_tank_1_desc: "Muito mais leve do que outros sistemas AT e mais antigo. O AT pode atingir apenas a 70-2.500 m, o que, em comparação com outros, é um alcance muito menor, mas também mais barato."
- CRM_Anti_tank_2: "9M133 Kornet"
- CRM_Anti_tank_2_desc: "9M133 Kornet"
+ CRM_Anti_tank_2: "9M133M Kornet-M"
+ CRM_Anti_tank_2_desc: "9M133M Kornet-M"
  CRM_Anti_tank_3: "AT-22"
  CRM_Anti_tank_4: "AT-45"
  CRM_MBT_1: "T-55"
@@ -8527,9 +8520,9 @@
  TAT_infantry_weapons_desc: "O AKM, desenvolvido em 1959, é a variante modernizada mais comum do rifle AK-47, desenvolvido por Mikhail Kalashnikov. É muito mais leve e mais preciso durante o fogo automático do que seu antecessor."
  TAT_infantry_weapons1: "AK-74"
  TAT_infantry_weapons1_desc: "O AK-74 é desenvolvido a partir do AKM e apresenta melhorias significativas sobre seu antecessor. Notavelmente, usa cartuchos de 5,45 mm em vez dos então padrão Pacto de Varsóvia de 7,62 mm."
- TAT_infantry_weapons2: "AK-74M"
+ TAT_infantry_weapons2: "AK-74N"
  TAT_infantry_weapons2_desc: "Embora o AK-74N seja internamente semelhante ao AK-74, ele é equipado com uma montagem em cauda de andorinha para óptica."
- TAT_infantry_weapons3: "AK-103"
+ TAT_infantry_weapons3: "AK-74M"
  TAT_infantry_weapons3_desc: "O fuzil de assalto AK-103 é derivado do AK-74M, calibrado para o cartucho 7,62x39mm M43. Assim como o mais antigo AKM, o 103 pode usar uma variedade de miras, incluindo visão noturna e telescópica. Bem como acoplar baioneta ou lança-granadas. A diferença da maioria dos AKs é o uso de plástico e materiais mais baratos no 103."
  TAT_infantry_weapons4: "AK-103"
  TAT_infantry_weapons4_desc: "O rifle de assalto AK-103 é um derivado do AK-74M com câmara para o cartucho M43 de 7,62x39mm. Muito parecido com o AKM mais antigo, o 103 pode usar uma variedade de miras, incluindo visão noturna e telescópica. Além de caber em uma baioneta ou lançador de granadas. A diferença da maioria dos AKs é o plástico e os materiais mais baratos do 103."
@@ -8601,8 +8594,8 @@
  TAT_Anti_tank_0_desc: "Usado em muitas guerras e em muitos veículos."
  TAT_Anti_tank_1: "AT-4 Fagot"
  TAT_Anti_tank_1_desc: "Muito mais leve que outros sistemas AT, e mais antigo. O AT só pode atingir a 70-2.500 m, o que, comparado aos outros, é uma faixa muito menor, mas também mais barata."
- TAT_Anti_tank_2: "9M133 Kornet"
- TAT_Anti_tank_2_desc: "9M133 Kornet"
+ TAT_Anti_tank_2: "9M133M Kornet-M"
+ TAT_Anti_tank_2_desc: "9M133M Kornet-M"
  TAT_Anti_tank_3: "AT-22"
  TAT_Anti_tank_4: "AT-45"
  TAT_MBT_1: "T-55"
@@ -8786,9 +8779,9 @@
  WAG_infantry_weapons_desc: "O AKM, desenvolvido em 1959, é a variante modernizada mais comum do fuzil AK-47, desenvolvido por Mikhail Kalashnikov. É muito mais leve e mais preciso durante o disparo automático do que seu antecessor."
  WAG_infantry_weapons1: "AK-74"
  WAG_infantry_weapons1_desc: "O AK-74 é desenvolvido a partir do AKM e possui melhorias significativas em relação ao seu antecessor. Notavelmente, ele usa cartuchos de 5,45mm em vez dos então padrão Pacto de Varsóvia de 7,62mm."
- SOV_infantry_weapons2: "AK-74M"
+ SOV_infantry_weapons2: "AK-74N"
  SOV_infantry_weapons2_desc: "Embora o AK-74N seja internamente semelhante ao AK-74, ele é equipado com uma montagem em cauda de andorinha para óptica."
- WAG_infantry_weapons3: "AK-103"
+ WAG_infantry_weapons3: "AK-74M"
  WAG_infantry_weapons3_desc: "O fuzil de assalto AK-103 é derivado do AK-74M, calibrado para o cartucho 7,62x39mm M43. Assim como o antigo AKM, o 103 pode usar uma variedade de miras, incluindo visão noturna e telescópica. Além de poder receber baioneta ou lançador de granadas. A diferença em relação à maioria dos AKs é o uso de plástico e materiais mais baratos no 103."
  WAG_infantry_weapons4: "AK-103"
  WAG_infantry_weapons4_desc: "O rifle de assalto AK-103 é um derivado do AK-74M com câmara para o cartucho M43 de 7,62x39mm. Muito parecido com o AKM mais antigo, o 103 pode usar uma variedade de miras, incluindo visão noturna e telescópica. Além de caber em uma baioneta ou lançador de granadas. A diferença da maioria dos AKs é o plástico e os materiais mais baratos do 103."
@@ -8860,8 +8853,8 @@
  WAG_Anti_tank_0_desc: "Usado em muitas guerras e em muitos veículos."
  WAG_Anti_tank_1: "AT-4 Fagot"
  WAG_Anti_tank_1_desc: "Muito mais leve do que os outros sistemas antitanque, e mais antigo. O AT só pode atingir alvos a 70-2.500 metros, o que, comparado aos outros, é muito menor, mas também mais barato."
- WAG_Anti_tank_2: "9M133 Kornet"
- WAG_Anti_tank_2_desc: "9M133 Kornet"
+ WAG_Anti_tank_2: "9M133M Kornet-M"
+ WAG_Anti_tank_2_desc: "9M133M Kornet-M"
  WAG_Anti_tank_3: "AT-22"
  WAG_Anti_tank_4: "AT-45"
  WAG_MBT_1: "T-55"
@@ -9011,8 +9004,8 @@
  PMR_Anti_tank_0_desc: "Usado em muitas guerras e em muitos veículos."
  PMR_Anti_tank_1: "AT-4 Fagot"
  PMR_Anti_tank_1_desc: "Muito mais leve do que os outros sistemas AT, e mais antigo. O AT pode atingir apenas a 70-2.500 m, o que, em comparação com os outros, é muito menor, mas também mais barato."
- PMR_Anti_tank_2: "9M133 Kornet"
- PMR_Anti_tank_2_desc: "9M133 Kornet"
+ PMR_Anti_tank_2: "9M133M Kornet-M"
+ PMR_Anti_tank_2_desc: "9M133M Kornet-M"
  PMR_MBT_1: "T-55"
  PMR_MBT_1_desc: "O T-54/55 é talvez o tanque mais produzido do mundo. Projetado e produzido nos primeiros anos da Guerra Fria, era o poder e a espinha dorsal do Exército Vermelho. Uma vez temido como símbolo do poder russo, tornou-se a representação icônica das forças blindadas do Oriente Médio sendo destruídas no rastro de um ataque aéreo americano."
  PMR_MBT_1_short: "T-55"
@@ -9109,3 +9102,10 @@
  UKR_infantry_weapons1: "AK-74"
  UKR_infantry_weapons2: "AK-74N"
  UKR_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons: "Tabuk AKM"
+ IRQ_infantry_weapons2: "AK-74N"
+ IRQ_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons4: "AK-103"
+ IRQ_infantry_weapons5: "AK-12"
+ IRQ_infantry_weapons6: "AK-23"
+ IRQ_infantry_weapons7: "AK-31"
