--- a/localisation/french/MD_focus_GER_l_french.yml
+++ b/localisation/french/MD_focus_GER_l_french.yml
@@ -2036,8 +2036,8 @@
  GER_upgraded_mining_equipment: "Upgraded Mining Equipment"
  GER_generic_spending_laws: "Government Public Budget"
  GER_generic_spending_laws_desc: "The Government public budget is the public tax funds which provides funding to our public services sector which includes; §Yhealthcare§!, §Yeducation§! & §Yinternal security§!."
- GER_Bundeswehr_modifier: "Bundeswehr"
- GER_Bundeswehr_modifier_desc: "this Modifier show you all the benefits you get for your Army from focus"
+ GER_Bundeswehr_modifier: "State of the Bundeswehr"
+ GER_Bundeswehr_modifier_desc: "This Modifier will show you all the benefits you get for the Bundeswehr (Army) from focuses you take"
  GER_great_negative_opinion: "§RGreat Negative Opinion§!"
  GER_slight_negative_opinion: "§tSlight Negative Opinion§!"
  GER_very_slight_negative_opinion: "§tVery Slight Negative Opinion§!"
@@ -2614,3 +2614,7 @@
  bavaria.1.b: "Absolument pas!"
  GER_agenda_2010: "Agenda 2010"
  GER_agenda_2010_desc: "Gerhard Schröder a toujours été un modéré parmi les sociaux-démocrates et a donc prôné la retenue budgétaire. L'« Agenda 2010 » est un projet ambitieux de coupes budgétaires et de réformes bureaucratiques qui suscitera sans aucun doute de vives critiques de la part des groupes de gauche et poussera le gouvernement vers le centre – mais il pourrait être fantastique pour le progrès économique."
+ GER_strengthen_the_service_sector: "Strengthen the Service Sector"
+ GER_strengthen_the_service_sector_desc: "We must strengthen the service sector in order to fully modernize our economy."
+ GER_european_business_opportunities: "European Business Opportunities"
+ GER_european_business_opportunities_desc: "By opening our economy to the rest of Europe, we will be able to fully utilize investments and opportunities provided by the new investment pool."
