--- a/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
@@ -302,7 +302,7 @@
  neutral_donju_tt: "§Y[?THIS.the_donju_opinion|2]§!"
  display_the_donju_opinion: "§Y$the_donju$§!的意见变化[?temp_opinion|+0]（当前：[DONJU_opinion_display]）\n"
  has_the_donju_tt: "$the_donju$"
- the_bazaar: "市场"
+ the_bazaar: "伊朗市场"
  the_bazaar_desc: "伊朗的中小型企业以传统名称“集市”为名。由于其影响力几乎无可比拟，安抚其利益始终是重中之重。"
  the_bazaar_dynamic_modifier: "£pol_idea $the_bazaar$"
  the_bazaar_opinion_tt: "$opinion_tick_rate_tt$ §Y$the_bazaar$§!对政府的评价：[TBAZ_opinion_display]\n\n§Y当前评价带来的效果：§!\n$MODIFIER_STABILITY_FACTOR$:[?THIS.TBAZ_stability_factor|+%]\n$modifier_production_speed_industrial_complex_factor$:[?THIS.TBAZ_production_speed_industrial_complex_factor|+%]\n$MODIFIER_CONSUMER_GOODS_FACTOR$:[?THIS.TBAZ_consunmer_goods_factor_var|Y%]\n"
