--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -2215,14 +2215,7 @@
  ISR_Rec_tank_5_short: "M7A2"
  IRE_APC_1: "蒂莫尼 APC"
  IRE_APC_1_short: "蒂莫尼 APC"
- IRQ_infantry_weapons: "Tabuk AKM"
- IRQ_infantry_weapons1: "Tabuk DMR"
- IRQ_infantry_weapons2: "AK-74N"
- IRQ_infantry_weapons3: "AK-74M"
- IRQ_infantry_weapons4: "AK-103"
- IRQ_infantry_weapons5: "AK-12"
- IRQ_infantry_weapons6: "AK-23"
- IRQ_infantry_weapons7: "AK-31"
+ IRQ_infantry_weapons1: "塔布克 狙击型"
  IRQ_SP_arty_1: "法欧"
  IRQ_SP_R_arty_0: "阿巴贝勒"
  IRQ_SP_R_arty_1: "萨耶尔-60"
@@ -9109,3 +9102,10 @@
  UKR_infantry_weapons1: "AK-74"
  UKR_infantry_weapons2: "AK-74N"
  UKR_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons: "塔布克 AKM"
+ IRQ_infantry_weapons2: "AK-74N"
+ IRQ_infantry_weapons3: "AK-74M"
+ IRQ_infantry_weapons4: "AK-103"
+ IRQ_infantry_weapons5: "AK-12"
+ IRQ_infantry_weapons6: "AK-23"
+ IRQ_infantry_weapons7: "AK-31"
