--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -418,7 +418,7 @@ l_english:
  australia_md.110.t: "West Timor Attempts to Seize Independence"
  australia_md.110.d: "West Timor has taken advantage of [IND.GetNameDefCap] having existing conflicts with its neighbours and used this opportune timing taking to streets in Kupang City demanding their independence, the cost of enforcing our rule on such a small territory may not be a current priority for our government, how should we respond?."
  australia_md.110.o1: "Let Timor Unite"
- australia_md.110.o1: "West Timor is [IND.GetAdjective]"
+ australia_md.110.o2: "West Timor is [IND.GetAdjective]"
  australia_md.111.t: "Indonesia Allows the West Timor Succession"
  australia_md.111.d: "[IND.GetNameDefCap] has allowed the West Timor Succession to join East Timor rather than have another conflict on another front, they have opted to allow their independence for now."
  australia_md.111.o1: "This is a great day for Timor"
@@ -428,6 +428,101 @@ l_english:
  australia_md.113.t: "Memorial for the Battle of Kapyong"
  australia_md.113.d: "A memorial service was held honour the fallen Australian soldiers that fought bravely in the battle of Kapyong on 22–27 April 1951 to help secure Korean freedom. Outnumbered ten to one by the advancing Chinese army they managed to hold out inflicting upwards of 5000 enemy casualties and many wounded, whilst only receiving 59 KIA and 111 wounded, The Australian 16th Field Regiment was later awarded the South Korean Presidential Unit Citation for its actions."
  australia_md.113.o1: "Lest We Forget"
+ australia_md.114.t: "JAEPA Trade Agreement Request"
+ australia_md.114.d: "[AST.GetNameDefCap] has requested that [JAP.GetNameDefCap] sign the JAEPA Trade Agreement, which will provide a boost in tax revenue and office income for both nations, However if we wish not to sign the trade agreement we can decline."
+ australia_md.114.o1: "Sign the Agreement"
+ australia_md.114.o2: "Reject the Agreement"
+ australia_md.115.t: "Japans Response to the Trade Agreement"
+ australia_md.115.d1: "[JAP.GetNameDefCap] has agreed to our request for a formal Trade Agreement to be signed between our nations, hopefully this marks the beginning of a new era of properity for both of our nations."
+ australia_md.115.d2: "[JAP.GetNameDefCap] has refused our request for a formal Trade Agreement to be signed between our nations, hopefully this does not mark the beginning of a rift between our nations."
+ australia_md.115.o1: "The Agreement is Signed"
+ australia_md.115.o2: "It is dissapointing our diplomats could not agree"
+ australia_md.116.t: "[AST.GetNameDefCap] asks for a Joint Security Pact"
+ australia_md.116.d: "[AST.GetNameDefCap] has asked for a Joint Security Pact, we can collaborate on regional security issues such as illegal drug and people smuggling operations as well as sharing information between our police and military. Should we sign the pact?."
+ australia_md.116.o1: "Sign the Pact"
+ australia_md.116.o2: "Reject the Pact"
+ australia_md.117.t: "Japans Response to the Joint Security Pact"
+ australia_md.117.d1: "[JAP.GetNameDefCap] has agreed to our request for a formal Joint Security Pact to be signed between our nations, now our police forces will benefit from shared intelligence, reducing our policing costs as a whole."
+ australia_md.117.d2: "[JAP.GetNameDefCap] has refused our request for a formal Joint Security Pact to be signed between our nations, opting to use their own intelligence for their policing and security issues."
+ australia_md.117.o1: "The Agreement is Signed"
+ australia_md.117.o2: "It is dissapointing our diplomats could not agree"
+ australia_md.118.t: "Australian Purchase Request For Nuclear Technologies"
+ australia_md.118.d: "Australia has requested to purchase some of our nuclear technologies in an effort to help their growing demand for cheap reliable nuclear generated power, [AST.GetNameDefCap] is willing to pay us $14bn for the acquisition of these technologies so they may be able to research and develop their own nuclear facilities."
+ australia_md.118.o1: "Allow the purchase"
+ australia_md.118.o2: "Reject the purchase"
+ australia_md.119.t: "Japans Decision on the sale of Nuclear Technnologies"
+ australia_md.119.d1: "[JAP.GetNameDefCap] has agreed to our request for the sale of Nuclear Technnologies between our nations, now our scientists will benfit from the blueprints and schematics acquired."
+ australia_md.119.d2: "[JAP.GetNameDefCap] has refused our request for the sale of Nuclear Technnologies between our nations, opting to keep their nuclear technologies in their own hands."
+ australia_md.119.o1: "The Agreement is Signed"
+ australia_md.119.o2: "It is dissapointing our diplomats could not agree"
+ australia_md.120.t: "Aceh-Malay Relations Summit"
+ australia_md.120.d: "A diplomatic meeting has been called by Australia between Aceh and [MAY.GetLeader] to discuss the potential of a non-aggression pact between Aceh and Malaysia to remove the need to devote our military assets along the mutual border, and provide a surety of peace between the two nations. Should we accept the offer from [ACE.GetNameDefCap] of a mutual non-aggression pact?"
+ australia_md.120.o1: "Sign the Agreement"
+ australia_md.120.o2: "We cannot agree to these terms..."
+ australia_md.121.t: "Aceh-Malay Relations Summit"
+ australia_md.121.d: "A diplomatic meeting has been called by Australia between [ACE.GetLeader] and Malaysia to discuss the potential of a non-aggression pact between Aceh and Malaysia to remove the need to devote our military assets along the mutual border, and provide a surety of peace between the two nations. Should we accept the [AST.GetAdjective] supported offer from [MAY.GetNameDefCap] of a mutual non-aggression pact?"
+ australia_md.121.o1: "Sign the Agreement"
+ australia_md.121.o2: "We cannot agree to these terms..."
+ australia_md.122.t: "Aceh-Malay Relation Summit Concludes"
+ australia_md.122.d1: "With [AST.GetAdjective] mediation we have managed to reach a historical agreement between [ACE.GetNameDefCap] and [MAY.GetNameDefCap], with both countries consenting to the agreement, with the signatures of [ACE.GetLeader] and [MAY.GetLeader] now on the offical documents this marks a new aera of co-operation in the South Asia-Pacific "
+ australia_md.122.d2: "[MAY.GetLeader] was willing to agree to the non-aggression pact however [ACE.GetLeader] had reservations and could not commit. The summit has reached an impasse and has now concluded."
+ australia_md.122.d3: "[ACE.GetLeader] was willing to agree to the non-aggression pact however [MAY.GetLeader] had reservations and could not commit. The summit has reached an impasse and has now concluded."
+ australia_md.122.d4: "The summit made little progress with both [ACE.GetLeader] and [MAY.GetLeader] rejecting the [AST.GetAdjective] backed proposal, not suprisingly this was about the only thing that was agreed upon."
+ australia_md.122.o1: "The Summit was a Historical Success"
+ australia_md.122.o2: "Nothing was gained..."
+ australia_md.123.t: "[IND.GetAdjective] [AST.GetAdjective] Comprehensive Economic Partnership"
+ australia_md.123.d: "[AST.GetNameDefCap] has sent us an invitation to join a Comprehensive Economic Partnership agreement together, this will cover increasing investment oppurtunities in both countries and the formal signing of a trade agreement by both nations, our domestic exporters and importers may be in favor of this move as it removes barriers to market entry. Should we sign the Agreement?"
+ australia_md.123.o1: "Sign the Agreement"
+ australia_md.123.o2: "Refuse to Sign"
+ australia_md.124.t: "[IND.GetAdjective] Decision on a Comprehensive Economic Partnership"
+ australia_md.124.d1: "[IND.GetNameDefCap] has agreed to our request for a Comprehensive Economic Partnership between our nations, now our exporters and importes will benfit from access to a new market."
+ australia_md.124.d2: "[IND.GetNameDefCap] has refused our request for the a Comprehensive Economic Partnership between our nations, opting to protect their local industries."
+ australia_md.124.o1: "The Agreement is Signed"
+ australia_md.124.o2: "It is dissapointing our diplomats could not agree"
+ australia_md.125.t: "Aid for [TIM.GetNameDefCap]"
+ australia_md.125.d: "[AST.GetNameDefCap] has sent us an request to give [TIM.GetNameDefCap] a one time aid package to help the new nation, the cost will be split between [AST.GetNameDefCap] and [IND.GetNameDefCap], this will provide food and basic agricultural equipment. It would surely be seen as a welcome gesture by [TIM.GetNameDefCap] Should we sign the Agreement?"
+ australia_md.125.o1: "Sign the Agreement"
+ australia_md.125.o2: "Refuse to Sign"
+ australia_md.126.t: "[IND.GetAdjective] Decision on a Timor Aid"
+ australia_md.126.d1: "[IND.GetNameDefCap] has agreed to our request for to provide aid to Timor from both our nations, this peaceful move has been applauded the Timor Government."
+ australia_md.126.d2: "[IND.GetNameDefCap] has refused our request to provide aid to Timor from both our nations, opting to keep their financial resources."
+ australia_md.126.o1: "The Aid is Sent!"
+ australia_md.126.o2: "It would have been nice for them to acquiesce..."
+ australia_md.127.t: "[AST.GetNameDefCap] is pushing our old claim"
+ australia_md.127.d: "[AST.GetNameDefCap] has sent us an request to collaborate together to create a claim combined from both of our historical claims on the area, Once we declare our intentions the [AST.GetAdjective]s have promised they will support our historical claim to Northern Papua, It will put us at immediate odds with the government of [PNG.GetNameDefCap], Should we agree to the collaboration ?"
+ australia_md.127.o1: "Papua is ours!"
+ australia_md.127.o2: "We cannot agree to such provocative action"
+ australia_md.128.t: "[IND.GetAdjective] Decision on the Papuan Resolution"
+ australia_md.128.d1: "[IND.GetNameDefCap] has agreed to our collaboration to request to create a claim combined from both of our historical claims on the area, and [IND.GetNameDefCap] now have made their announcement of intent to claim the area."
+ australia_md.128.d2: "[IND.GetNameDefCap] has refused our request to create a claim combined from both of our historical claims on the area, opting not disrupt relations with their eastern neighbour and to keep their borders as they currently are."
+ australia_md.128.o1: "They have pushed their historical claim to West Papua a bit more than we expected!"
+ australia_md.128.o2: "They may have been concerned we would side with [PNG.GetNameDefCap]"
+ australia_md.129.t: "Indo-Malay Relations Summit"
+ australia_md.129.d: "A diplomatic meeting has been called by Australia between [IND.GetNameDefCap] and [MAY.GetLeader] to discuss the potential of a non-aggression pact between [IND.GetNameDefCap] and [MAY.GetNameDefCap] to remove the need to devote our military assets along the mutual border, and provide a surety of peace between the two nations. Should we accept the offer from [IND.GetNameDefCap] of a mutual non-aggression pact?"
+ australia_md.129.o1: "Sign the Agreement"
+ australia_md.129.o2: "We cannot agree to these terms..."
+ australia_md.130.t: "Aceh-Malay Relations Summit"
+ australia_md.130.d: "A diplomatic meeting has been called by Australia between [IND.GetLeader] and [MAY.GetNameDefCap] to discuss the potential of a non-aggression pact between [IND.GetNameDefCap] and Malaysia to remove the need to devote our military assets along the mutual border, and provide a surety of peace between the two nations. Should we accept the [AST.GetAdjective] supported offer from [IND.GetNameDefCap] of a mutual non-aggression pact?"
+ australia_md.130.o1: "Sign the Agreement"
+ australia_md.130.o2: "We cannot agree to these terms..."
+ australia_md.131.t: "Indo-Malay Relation Summit Concludes"
+ australia_md.131.d1: "With [AST.GetAdjective] mediation we have managed to reach a historical agreement between [IND.GetNameDefCap] and [MAY.GetNameDefCap], with both countries consenting to the agreement, with the signatures of [IND.GetLeader] and [MAY.GetLeader] now on the offical documents this marks a new aera of co-operation in the South Asia-Pacific "
+ australia_md.131.d2: "[MAY.GetLeader] was willing to agree to the non-aggression pact however [IND.GetLeader] had reservations and could not commit. The summit has reached an impasse and has now concluded."
+ australia_md.131.d3: "[IND.GetLeader] was willing to agree to the non-aggression pact however [MAY.GetLeader] had reservations and could not commit. The summit has reached an impasse and has now concluded."
+ australia_md.131.d4: "The summit made little progress with both [IND.GetLeader] and [MAY.GetLeader] rejecting the [AST.GetAdjective] backed proposal, not suprisingly this was about the only thing that was agreed upon."
+ australia_md.131.o1: "The Summit was a Historical Success"
+ australia_md.131.o2: "Nothing was gained..."
+ australia_md.132.t: "Korea-Australia Free Trade Agreement Request"
+ australia_md.132.d: "[AST.GetNameDefCap] has requested that [KOR.GetNameDefCap] sign a Free Trade Agreement, which will provide a new sources of materials to be availble for production use both nations, and open investment opportunites in both nations. However if we wish not to sign the trade agreement we can decline."
+ australia_md.132.o1: "Sign the Agreement"
+ australia_md.132.o2: "Reject the Agreement"
+ australia_md.133.t: "[KOR.GetNameDefCap] Response to the Trade Agreement"
+ australia_md.133.d1: "[KOR.GetNameDefCap] has agreed to our request for a formal Trade Agreement to be signed between our nations, hopefully this marks the beginning of a new era of properity for both of our nations."
+ australia_md.133.d2: "[KOR.GetNameDefCap] has refused our request for a formal Trade Agreement to be signed between our nations, hopefully this does not mark the beginning of a rift between our nations, they seem to have forgotten our past commitments to them."
+ australia_md.133.o1: "The agreement is signed"
+ australia_md.133.o2: "Unfortunately an agreement could not be reached"
+ 
+
 
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
@@ -1492,6 +1587,10 @@ l_english:
  AST_ANZAC_Commitments_idea: "ANZAC Commitments"
  AST_ANZAC_Commitments_mod: "ANZAC Commitments"
  ANZAC_Veteran: "ANZAC Veteran"
+ AST_JAEPA_yes_tt: "§GIf Japan Accepts: §!"
+ AST_Joint_Security_Pact_idea: "Joint Security Pact"
+ AST_Indonesia_Australia_Comprehensive_Economic_Partnership_ast_tt: "§YIf §! §GIndonesia Accepts: §!"
+
  
  #regional
  australia_new_zealand_rugby_mod: "Friendly Sports Rivalry"
@@ -1579,7 +1678,7 @@ l_english:
  AST_Indo_Malay_Relations: "Indo-Malay Relations"
  AST_Indo_Malay_Relations_desc: "The Indonesia–Malaysia confrontation on Borneo confrontation was an armed conflict from 1963 to 1966 that stemmed from Indonesia's opposition to the creation of the state of Malaysia from the Federation of Malaya. To ensure this conflict does not reignite we proposed a meeting between the two nations discussing potential further investment opportunities and a non-aggression pact"
  AST_The_Papuan_Resolution: "The Papuan Resolution"
- AST_The_Papuan_Resolution_desc: "[IND.GetLeader] has expressed a desire to unite [PNG.GetNameDefCap] but was always wary of involvement against current european powers, if we utilise an old obscure legal passage from [PAP.GetAdjective] laws, Indonesia will have more legitiamate claim to Papua with our support."
+ AST_The_Papuan_Resolution_desc: "By working together with [IND.GetLeader] we can combine and push their historical claims towards [PNG.GetNameDefCap] if they accept, if we utilise an old obscure legal passage from [PAP.GetAdjective] laws, Indonesia will have more legitimate claim to Papua with our support."
  AST_Dialogue_with_the_North: "Dialogue With the North"
  AST_Dialogue_with_the_North_desc: "We have had extreme difficulty in setting up a meeting with [NKO.GetNameDefCap] to discuss further political relations, although a direct meeting between our leaders was unable to be scheduled, a diplomatic exchange has been set up via our [KOR.GetAdjective] friends."
  AST_Stepping_over_the_DMZ: "Stepping over the DMZ"
@@ -1637,7 +1736,16 @@ l_english:
  AST_Taiwainese_University_and_Education_Collaboration: "Taiwainese University and Education Collaboration"
  AST_Taiwainese_University_and_Education_Collaboration_desc: "A University and Education Collaboration between our two nations would be beneficial to both our scientific commities as whole, this proram will help our scientists overcome funding issues which will spearhead breakthroughs in critical technologies for our nations."
  AST_Keeping_the_Status_Quo: "Keeping the Status Quo"
- AST_Keeping_the_Status_Quo: 'Rather than taking a confrontational approach it is more pragmatic to use peaceful means to gain regional security for our nations and for our friends too, [AST.GetLeader] has made a public statement affirming our neutrality on  the China-Taiwan relations issue for now.'
+ AST_Keeping_the_Status_Quo: "Rather than taking a confrontational approach it is more pragmatic to use peaceful means to gain regional security for our nations and for our friends too, [AST.GetLeader] has made a public statement affirming our neutrality on  the China-Taiwan relations issue for now."
+ AST_JAEPA_yes_tt: "§G If Japan Accepts: §!"
+ AST_Joint_Security_Pact_idea: "Joint Security Pact"
+ AST_Joint_Security_Pact_yes_tt: "§GIf Japan Accepts: §!"
+ AST_Aceh_Malay_Relations_tt: "§YAccepting this decision will enter into a mutual §! §Gnon-aggression pact §!"
+ AST_Aceh_Malay_Relations_aus_tt: "§YIf both §! §GAceh §! §Yand §! §GMalaysia accept: §! "
+ AST_Indo_Malay_Relations_aus_tt: "§YIf both §! §GIndonesia §! §Yand §! §GMalaysia accept: §! "
+ AST_Korea_Australia_Free_Trade_Agreement_tt: "§GIf Korea Accepts: §!"
+
+
 #military
  AST_ADF: "ADF"
  AST_ADF_desc: ""
